A new model and add measure of bidding quality

--- a/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
+++ b/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
@@ -23,11 +23,12 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -69,8 +70,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '2D', 'insta_score': 0.311, 'expected_score': 2, 'adjustment': 16},\n",
-       " {'call': '2C', 'insta_score': 0.666, 'expected_score': -36, 'adjustment': 33}]"
+       "[{'call': '2C', 'insta_score': 0.751, 'expected_score': -47, 'adjustment': 38},\n",
+       " {'call': '2S', 'insta_score': 0.11, 'expected_score': -28, 'adjustment': 6}]"
       ]
      },
      "execution_count": 2,
@@ -83,7 +84,7 @@
     "hand = 'AQJ986.QJ952.7.8'\n",
     "\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -101,36 +102,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tx.xx.T9xx.KJxxx xx.AKx.Q8xx.AQ9x AQJ98x.QJ9xx.x.8 Kxx.T8x.AKJx.Txx 0.99703 \n",
-      " P-1N-2C-X-2H-P-P-X-P-P-P (5.0)  \n",
-      " P-1N-2D-X-2H-X-P-3N-P-P-P (10.0) \n",
-      "xxx.ATxx.Jxx.Qxx Txx.Kx.AKQx.KTxx AQJ98x.QJ9xx.x.8 K.8x.T98xx.AJ9xx 0.99823 \n",
-      " P-1N-2C-X-2H-X-P-P-P (9.7)  \n",
-      " P-1N-2D-X-2H-X-P-P-P (9.7) \n",
-      "x.xx.J8xxx.KQJxx Kx.A8xx.KQT.A9xx AQJ98x.QJ9xx.x.8 Txxx.KT.A9xx.Txx 0.99914 \n",
-      " P-1N-2C-X-2H-X-P-P-P (6.4)  \n",
-      " P-1N-2D-X-2H-X-P-P-P (6.4) \n",
-      "Txxx.8x.ATxx.Jxx Kx.Kxx.KQ8x.KQ9x AQJ98x.QJ9xx.x.8 x.ATx.J9xx.ATxxx 0.99826 \n",
-      " P-1N-2C-X-2S-P-P-3C-P-P-P (9.5)  \n",
-      " P-1N-2D-X-2S-X-P-P-P (10.0) \n",
-      "Tx.Ax.T9xxx.Qxxx Kx.Txx.AQx.AKJ9x AQJ98x.QJ9xx.x.8 xxx.K8x.KJ8x.Txx 0.99696 \n",
-      " P-1N-2C-X-2H-3C-P-P-P (8.0)  \n",
-      " P-1N-2D-X-2H-3C-P-P-P (8.0) \n",
-      "x.T8x.AT98.AQTxx KTx.AKx.Kx.KJxxx AQJ98x.QJ9xx.x.8 xxx.xx.QJxxxx.9x 0.94270 \n",
-      " P-1N-2C-P-2H-3C-P-3D-P-P-P (7.0)  \n",
-      " P-1N-2D-P-2H-3C-P-P-P (5.5) \n",
-      "xxx.T8xx.98x.QJ9 KT.AKx.AJxx.Txxx AQJ98x.QJ9xx.x.8 xx.x.KQTxx.AKxxx 0.99830 \n",
-      " P-1N-2C-X-2H-X-P-3N-P-P-P (6.5)  \n",
-      " P-1N-2D-X-2H-X-P-3D-P-P-P (11.2) \n",
-      "x.Tx.AT98x.KJT9x Kxx.AKx.KQxx.Qxx AQJ98x.QJ9xx.x.8 Txx.8xx.Jxx.Axxx 0.99941 \n",
-      " P-1N-2C-P-2H-P-P-P (8.6)  \n",
-      " P-1N-2D-P-2H-P-P-P (8.6) \n",
-      "Kx.T8.KJTx.Qxxxx Txx.AKxx.AQx.ATx AQJ98x.QJ9xx.x.8 xx.xx.98xxx.KJ9x 0.99919 \n",
-      " P-1N-2C-P-2S-P-P-P (8.5)  \n",
-      " P-1N-2D-P-2H-P-P-P (6.8) \n",
-      "KTxx.xx.98xx.Axx xx.AKT.AKx.Qxxxx AQJ98x.QJ9xx.x.8 x.8xx.QJTxx.KJT9 0.99822 \n",
-      " P-1N-2C-X-2S-3C-P-P-P (10.2)  \n",
-      " P-1N-2D-X-2S-3C-P-P-P (10.2) \n"
+      "Tx.xx.AKxx.QJxxx Kxx.ATx.Qxxx.AK9 AQJ98x.QJ9xx.x.8 xx.K8x.JT98.Txxx 0.96538 \n",
+      " P-1N-2C-P-2H-P-2S-P-P-P (9.6)  \n",
+      " P-1N-2S-P-P-P (9.6) \n",
+      "x.8xx.AJ8x.KTxxx Kxx.KTx.KQxx.AJx AQJ98x.QJ9xx.x.8 Txx.Ax.T9xx.Q9xx 0.99914 \n",
+      " P-1N-2C-P-2H-P-2S-P-P-P (7.5)  \n",
+      " P-1N-2S-P-P-P (7.5) \n",
+      "Tx.Axx.QJ8x.T9xx Kxxx.KT8.Kx.AQxx AQJ98x.QJ9xx.x.8 x.xx.AT9xxx.KJxx 0.97966 \n",
+      " P-1N-2C-2D-P-P-2S-3D-P-P-P (8.8)  \n",
+      " P-1N-2S-3D-P-3N-P-P-P (7.6) \n",
+      "xx.T8x.Axx.J9xxx Tx.AK.QT98x.AKxx AQJ98x.QJ9xx.x.8 Kxx.xxx.KJxx.QTx 0.53458 \n",
+      " P-1N-2C-X-P-2D-2S-3D-P-P-P (10.0)  \n",
+      " P-1N-2S-2N-P-3C-P-3N-P-P-P (8.8) \n",
+      "Tx.Txx.AT8xx.xxx Kxx.A8x.Kxx.AK9x AQJ98x.QJ9xx.x.8 xx.Kx.QJ9x.QJTxx 0.99930 \n",
+      " P-1N-2C-X-P-P-2S-3C-P-P-P (8.9)  \n",
+      " P-1N-2S-3C-P-P-P (8.9) \n",
+      "xx.A8.9xxx.KQTxx KTxx.Kx.KQJx.AJx AQJ98x.QJ9xx.x.8 x.Txxx.AT8x.9xxx 0.99779 \n",
+      " P-1N-2C-P-2H-P-2S-P-P-P (9.0)  \n",
+      " P-1N-2S-P-P-P (9.0) \n",
+      "xxx.xx.KJ9x.9xxx Kx.K8xx.Axxx.AKx AQJ98x.QJ9xx.x.8 Tx.AT.QT8x.QJTxx 0.99620 \n",
+      " P-1N-2C-X-P-2H-2S-2N-P-P-P (7.9)  \n",
+      " P-1N-2S-3C-P-P-P (9.7) \n",
+      "Tx.Tx.Jxx.QJ9xxx Kxx.Kxx.A8xx.AKx AQJ98x.QJ9xx.x.8 xx.A8x.KQT9x.Txx 0.99891 \n",
+      " P-1N-2C-2D-P-P-2S-3D-P-P-P (9.7)  \n",
+      " P-1N-2S-2N-P-3C-P-3N-P-P-P (9.6) \n",
+      "xx.xx.AJTxx.Axxx KT.AKT.Q9x.KJ9xx AQJ98x.QJ9xx.x.8 xxx.8xx.K8xx.QTx 0.99526 \n",
+      " P-1N-2C-P-2H-3C-P-P-P (7.0)  \n",
+      " P-1N-2S-P-P-3C-P-P-P (7.0) \n",
+      "Tx.xx.T8xx.Axxxx Kxx.A8x.AQJx.KT9 AQJ98x.QJ9xx.x.8 xx.KTx.K9xx.QJxx 0.99874 \n",
+      " P-1N-2C-X-P-2D-2S-3D-P-P-P (9.6)  \n",
+      " P-1N-2S-2N-P-3C-P-3N-P-P-P (7.9) \n"
      ]
     }
    ],
@@ -159,24 +160,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xxx.T8x.AK9xx.xx Tx.AKxx.Qxx.KQJx AQJ98x.QJ9xx.x.8 Kx.x.JT8x.AT9xxx 1.00\n",
-      "Kx.8xx.JTxxx.9xx xxx.AK.Kxx.KQTxx AQJ98x.QJ9xx.x.8 Tx.Txx.AQ98.AJxx 1.00\n",
-      "xx.8xx.J8xx.QJxx Kxx.Ax.AQx.KTxxx AQJ98x.QJ9xx.x.8 Tx.KTx.KT9xx.A9x 1.00\n",
-      "Txxx.x.T9xx.AJxx Kx.AT8xx.Kxx.KQ9 AQJ98x.QJ9xx.x.8 x.Kx.AQJ8x.Txxxx 0.45\n",
-      "xx.x.KT9xxx.Q9xx Kx.AKxx.Qxx.ATxx AQJ98x.QJ9xx.x.8 Txx.T8x.AJ8.KJxx 0.46\n",
-      "Tx.Kxxx.Qxxx.QJx Kxxx.T8.AK9x.AKx AQJ98x.QJ9xx.x.8 x.Ax.JT8x.T9xxxx 1.00\n",
-      "xx.ATx.9xxxx.Txx xx.Kxx.QJTx.AKQJ AQJ98x.QJ9xx.x.8 KTx.8x.AK8.9xxxx 1.00\n",
-      "xx.xx.T98xx.AQxx Kxx.A8x.AQx.KTxx AQJ98x.QJ9xx.x.8 Tx.KTx.KJxx.J9xx 1.00\n",
-      "Txx.KTx.Qxxx.Txx Kxx.Axx.JT9.AK9x AQJ98x.QJ9xx.x.8 x.8x.AK8xx.QJxxx 1.00\n",
-      "xx.Tx.T9xx.AK9xx Tx.AKxx.AJ8x.QJx AQJ98x.QJ9xx.x.8 Kxx.8x.KQxx.Txxx 1.00\n"
+      "Tx.xx.AKxx.QJxxx Kxx.ATx.Qxxx.AK9 AQJ98x.QJ9xx.x.8 xx.K8x.JT98.Txxx 0.97\n",
+      "x.8xx.AJ8x.KTxxx Kxx.KTx.KQxx.AJx AQJ98x.QJ9xx.x.8 Txx.Ax.T9xx.Q9xx 1.00\n",
+      "Tx.Axx.QJ8x.T9xx Kxxx.KT8.Kx.AQxx AQJ98x.QJ9xx.x.8 x.xx.AT9xxx.KJxx 0.98\n",
+      "xx.T8x.Axx.J9xxx Tx.AK.QT98x.AKxx AQJ98x.QJ9xx.x.8 Kxx.xxx.KJxx.QTx 0.53\n",
+      "Tx.Txx.AT8xx.xxx Kxx.A8x.Kxx.AK9x AQJ98x.QJ9xx.x.8 xx.Kx.QJ9x.QJTxx 1.00\n",
+      "xx.A8.9xxx.KQTxx KTxx.Kx.KQJx.AJx AQJ98x.QJ9xx.x.8 x.Txxx.AT8x.9xxx 1.00\n",
+      "xxx.xx.KJ9x.9xxx Kx.K8xx.Axxx.AKx AQJ98x.QJ9xx.x.8 Tx.AT.QT8x.QJTxx 1.00\n",
+      "Tx.Tx.Jxx.QJ9xxx Kxx.Kxx.A8xx.AKx AQJ98x.QJ9xx.x.8 xx.A8x.KQT9x.Txx 1.00\n",
+      "xx.xx.AJTxx.Axxx KT.AKT.Q9x.KJ9xx AQJ98x.QJ9xx.x.8 xxx.8xx.K8xx.QTx 1.00\n",
+      "Tx.xx.T8xx.Axxxx Kxx.A8x.AQJx.KT9 AQJ98x.QJ9xx.x.8 xx.KTx.K9xx.QJxx 1.00\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(auction)\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction(auction, 2)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(min(10,sample_hands.shape[0])):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])} {sorted_score[i]:.2f}')"
    ]
