--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -23,8 +23,8 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-1335000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -70,14 +70,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS',\n",
-       "  'insta_score': 0.558,\n",
-       "  'expected_score': -102,\n",
-       "  'adjustment': 28},\n",
-       " {'call': '2C',\n",
-       "  'insta_score': 0.433,\n",
-       "  'expected_score': -128,\n",
-       "  'adjustment': 22}]"
+       "[{'call': '2C',\n",
+       "  'insta_score': 0.621,\n",
+       "  'expected_score': -131,\n",
+       "  'adjustment': 31},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.375,\n",
+       "  'expected_score': -133,\n",
+       "  'adjustment': 19}]"
       ]
      },
      "execution_count": 2,
@@ -90,7 +90,7 @@
     "hand = 'A.8xx.Jxx.AQxxxx'\n",
     "\n",
     "auction = [\"1S\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -107,8 +107,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'X', 'insta_score': 0.798, 'expected_score': 20, 'adjustment': 40},\n",
-       " {'call': 'PASS', 'insta_score': 0.201, 'expected_score': 8, 'adjustment': 10}]"
+       "[{'call': 'X', 'insta_score': 0.892, 'expected_score': 3, 'adjustment': 45},\n",
+       " {'call': 'PASS', 'insta_score': 0.107, 'expected_score': 15, 'adjustment': 5}]"
       ]
      },
      "execution_count": 3,
@@ -118,7 +118,7 @@
    ],
    "source": [
     "auction = [\"1S\",\"PASS\",\"1N\",\"PASS\",\"2C\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n"
@@ -134,36 +134,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99862 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (7.6)  \n",
+      "Kxxxx.A.KTx.KJ9x A.8xx.Jxx.AQxxxx xx.QJTxx.A9xx.8x QJT98.K9xx.Q8x.T 0.99870 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.7)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.7) \n",
+      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99868 \n",
+      " 1S-P-1N-P-2C-X-P-2D-P-P-P (6.6)  \n",
       " 1S-P-1N-P-2C-P-2S-P-P-P (7.6) \n",
-      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99835 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (6.9)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
-      "K98xx.Jx.AQ.KJ8x A.8xx.Jxx.AQxxxx x.KQT9x.KT9xx.T9 QJTxxx.Axx.8xx.x 0.99792 \n",
+      "KQ8xx.AJ.8x.KJTx A.8xx.Jxx.AQxxxx 9x.Kxxxx.A9x.98x JTxxx.QT9.KQTxx. 0.99861 \n",
+      " 1S-P-1N-P-2C-X-P-2D-P-P-P (8.5)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.5) \n",
+      "KJ9xx.AQx.K.JT8x A.8xx.Jxx.AQxxxx 8x.T9xx.AQxx.K9x QTxxx.KJx.T98xx. 0.99851 \n",
+      " 1S-P-1N-P-2C-X-P-2D-P-P-P (6.5)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.8) \n",
+      "K98xx.Jx.AQ.KJ8x A.8xx.Jxx.AQxxxx x.KQT9x.KT9xx.T9 QJTxxx.Axx.8xx.x 0.99846 \n",
       " 1S-P-1N-P-2C-X-P-P-P (6.4)  \n",
       " 1S-P-1N-P-2C-P-P-P (6.4) \n",
-      "KJxxx.AKT.x.KT9x A.8xx.Jxx.AQxxxx Qx.9xx.AK98x.J8x T98xx.QJxx.QTxx. 0.99790 \n",
-      " 1S-P-1N-P-2C-X-2D-P-P-P (6.6)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.7) \n",
-      "KT8xx.A9.A8.J8xx A.8xx.Jxx.AQxxxx xx.KJxx.QT9xx.KT QJ9xx.QTxx.Kxx.9 0.99779 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (7.1)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.1) \n",
-      "K8xxx.Ax.A.J98xx A.8xx.Jxx.AQxxxx Qx.QT9xx.KT98x.T JT9xx.KJx.Qxxx.K 0.99778 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (7.1)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.1) \n",
-      "Q8xxx.AK.xx.KT9x A.8xx.Jxx.AQxxxx K.QT9xx.QT98x.J8 JT9xxx.Jxx.AKx.x 0.99772 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (4.9)  \n",
-      " 1S-P-1N-P-2C-P-P-P (4.9) \n",
-      "KJTxx.K9.KT.KJT8 A.8xx.Jxx.AQxxxx Qx.AQTxx.xxx.9xx 98xxx.Jxx.AQ98x. 0.99762 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (6.9)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
-      "KT8xx.x.AQx.KT98 A.8xx.Jxx.AQxxxx 9x.KQTxx.KT9xx.x QJxxx.AJ9x.8x.Jx 0.99762 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (6.8)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (6.8) \n",
-      "KT9xx.AQx.A.T98x A.8xx.Jxx.AQxxxx xx.KJxx.QT98x.KJ QJ8xx.T9x.Kxxx.x 0.99750 \n",
+      "QJ98x.AK.Kx.JT9x A.8xx.Jxx.AQxxxx Tx.Txxx.AQTxx.Kx Kxxxx.QJ9x.98x.8 0.99834 \n",
       " 1S-P-1N-P-2C-X-2S-P-P-P (7.9)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.9) \n"
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.9) \n",
+      "KQJTx.A.KTx.J8xx A.8xx.Jxx.AQxxxx xx.KQxx.Q8xx.KT9 98xxx.JT9xx.A9x. 0.99830 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.5)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.5) \n",
+      "KJTxx.K9.KT.KJT8 A.8xx.Jxx.AQxxxx Qx.AQTxx.xxx.9xx 98xxx.Jxx.AQ98x. 0.99822 \n",
+      " 1S-P-1N-P-2C-X-P-2D-P-P-P (8.1)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
+      "QT8xx.KQ.A9.KT98 A.8xx.Jxx.AQxxxx Kx.T9xx.KQTxx.Jx J9xxx.AJxx.8xx.x 0.99816 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.5)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.5) \n",
+      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99783 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.9)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n"
      ]
     }
    ],
@@ -192,24 +192,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qxxx.x.QTxxx.98x KTxx.KQxx.AK.JTx A.8xx.Jxx.AQxxxx J98x.AJT9x.98x.K 1.00\n",
-      "JTxx.QTx.Kxx.8xx Q9xx.A9x.AQT8.K9 A.8xx.Jxx.AQxxxx K8xx.KJxx.9xx.JT 1.00\n",
-      "J98xx.A9xx.x.8xx KQx.KQT.KQT9x.JT A.8xx.Jxx.AQxxxx Txxx.Jxx.A8xx.K9 1.00\n",
-      "KTx.Txx.K9xx.9xx QJ8x.KJx.AQx.KJT A.8xx.Jxx.AQxxxx 9xxxx.AQ9x.T8x.8 1.00\n",
-      "Q9xx.Q9x.9xxx.Jx Jx.AJx.AKT8x.KT8 A.8xx.Jxx.AQxxxx KT8xxx.KTxx.Q.9x 1.00\n",
-      "Txxx.K9x.QTxx.Jx Q9x.QJxx.AK8.K98 A.8xx.Jxx.AQxxxx KJ8xx.ATx.9xx.Tx 1.00\n",
-      "xxxx.Kxxx.8.J98x KJ9.AQx.AT9xx.KT A.8xx.Jxx.AQxxxx QT8xx.JT9.KQxx.x 0.99\n",
-      "T9xx.KJ.T9xx.T8x Qxx.AT9x.AK8x.Kx A.8xx.Jxx.AQxxxx KJ8xx.Qxxx.Qx.J9 1.00\n",
-      "8xx.Txxxx.98x.Tx KQ9xx.AQJ.Txx.KJ A.8xx.Jxx.AQxxxx JTxx.K9.AKQx.98x 0.43\n",
-      "Tx.AKQJ9.xxx.J9x KQJx.xxx.AK.KT8x A.8xx.Jxx.AQxxxx 98xxxx.Tx.QT98x. 0.41\n"
+      "98x.9xxxx.Qxx.T9 KQJx.AKJT.8x.KJ8 A.8xx.Jxx.AQxxxx Txxxx.Q.AKT9x.xx 0.63\n",
+      "9xx.AQTx.T9xxx.8 KQTx.Jx.AQx.KT9x A.8xx.Jxx.AQxxxx J8xxx.K9xx.K8.Jx 0.99\n",
+      "QJT8xx.Tx.9x.JT9 Kx.KQxx.A8xx.Kxx A.8xx.Jxx.AQxxxx 9xxx.AJ9x.KQTx.8 0.62\n",
+      "JT8xxx.T9x.KT.Tx Qxx.AQx.Axxx.K8x A.8xx.Jxx.AQxxxx K9x.KJxx.Q98x.J9 0.97\n",
+      "8xxxx.xx.AQx.J8x KQx.AKTxx.9xx.K9 A.8xx.Jxx.AQxxxx JT9x.QJ9.KT8x.Tx 0.27\n",
+      "J9xx.QJ9x.Tx.T9x KQxx.Kx.K8xx.KJx A.8xx.Jxx.AQxxxx T8xx.ATxx.AQ9x.8 0.98\n",
+      "QTxxx.Ax.Q8xxx.8 K9x.KT.AKT9.KT9x A.8xx.Jxx.AQxxxx J8xx.QJ9xxx.x.Jx 1.00\n",
+      "Txxx.9xx.A8xx.T8 QJ9x.AKx.Qx.KJ9x A.8xx.Jxx.AQxxxx K8xx.QJTx.KT9x.x 1.00\n",
+      "8xxx.QJxx.9xx.8x K9xx.KT.AQx.KJT9 A.8xx.Jxx.AQxxxx QJTx.A9xx.KT8x.x 1.00\n",
+      "8xx.Txx.9xx.T9xx JTxx.AKJ9.A8x.KJ A.8xx.Jxx.AQxxxx KQ9xx.Qxx.KQTx.8 1.00\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(auction)\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction(auction,2)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(min(10,sample_hands.shape[0])):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])} {sorted_score[i]:.2f}')"
    ]
