--- a/UCBC 2024/Simulations/Bidding3D.ipynb
+++ b/UCBC 2024/Simulations/Bidding3D.ipynb
@@ -23,11 +23,12 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -71,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'call': '3D', 'insta_score': 0.979}]\n",
-      "[{'call': '3D', 'insta_score': 0.968}]\n",
-      "[{'call': '3D', 'insta_score': 0.979}]\n",
-      "[{'call': '3D', 'insta_score': 0.968}]\n"
+      "[{'call': '3D', 'insta_score': 0.861}]\n",
+      "[{'call': '3D', 'insta_score': 0.895}]\n",
+      "[{'call': '3D', 'insta_score': 0.861}]\n",
+      "[{'call': '3D', 'insta_score': 0.895}]\n"
      ]
     }
    ],
@@ -87,22 +88,22 @@
     "\n",
     "# the auction goes:\n",
     "auction = []\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "auction = [\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 1, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "auction = [\"PAD_START\",\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 3, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 3, 3, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
@@ -119,11 +120,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 1.0, 'expected_score': 392, 'adjustment': 50},\n",
-       " {'call': '5D',\n",
-       "  'insta_score': 0.0,\n",
-       "  'expected_score': -450,\n",
-       "  'adjustment': -1751}]"
+       "[{'call': 'PASS',\n",
+       "  'insta_score': 0.939,\n",
+       "  'expected_score': 361,\n",
+       "  'adjustment': 470},\n",
+       " {'call': '4D',\n",
+       "  'insta_score': 0.027,\n",
+       "  'expected_score': -473,\n",
+       "  'adjustment': -1404}]"
       ]
      },
      "execution_count": 3,
@@ -171,16 +175,16 @@
     {
      "data": {
       "text/plain": [
-       "['AQJx.AKTxx..A8xx Txx.QJ8.A9xxxx.K K9xx.xxxx..9xxxx 8x.9.KQJT8xx.QJT 0.05584 \\n 2D-P-P-X-P-P-P (9.6)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.6) ',\n",
-       " 'AKQJT.JT8xx..AKx xx.Axx.A9xxxx.xx 9xxx.KQxx..98xxx 8x.9.KQJT8xx.QJT 0.02452 \\n 2D-P-P-X-P-P-P (9.8)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.8) ',\n",
-       " 'AT9x.KJxx..AKxxx xx.Qxx.A9xxxx.8x KQJxx.AT8xx..9xx 8x.9.KQJT8xx.QJT 0.02050 \\n 2D-P-P-X-P-P-P (8.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.5) ',\n",
-       " 'AK9xx.AQJxxx..Ax Jx.Kx.A9xxxx.9xx QTxx.T8xx..K8xxx 8x.9.KQJT8xx.QJT 0.01909 \\n 2D-P-P-X-P-P-P (8.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.5) ',\n",
-       " 'AKTx.KJxx..Axxxx J9x.QTx.A9xxxx.8 Qxxx.A8xxx..K9xx 8x.9.KQJT8xx.QJT 0.01766 \\n 2D-P-P-X-P-P-P (9.2)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.2) ',\n",
-       " 'AK9x.AKQJx..AKxx QJx.xx.A9xxxx.xx Txxx.T8xxx..98xx 8x.9.KQJT8xx.QJT 0.01453 \\n 2D-P-P-X-P-P-P (8.7)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.7) ',\n",
-       " 'AJxxxx.AQJx..AKx T.KTx.A9xxxx.8xx KQ9x.8xxxx..9xxx 8x.9.KQJT8xx.QJT 0.01324 \\n 2D-P-P-X-P-P-P (9.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.5) ',\n",
-       " 'AK9xxx.KQx..AKxx JT.Ax.A9xxxx.xxx Qxx.JT8xxxx..98x 8x.9.KQJT8xx.QJT 0.01264 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.0) ',\n",
-       " 'AQTxx.KQJxx..AKx J9x.8xx.A9xxxx.x Kxx.ATxx..98xxxx 8x.9.KQJT8xx.QJT 0.01100 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.0) ',\n",
-       " 'AQ9x.KQ8x..A9xxx xxx.Ax.A9xxxx.8x KJTx.JTxxxx..Kxx 8x.9.KQJT8xx.QJT 0.01027 \\n 2D-P-P-X-P-P-P (9.1)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.1) ']"
+       "['AKTx.JTxx..AK8xx xx.K8.A9xxxx.9xx QJ9xx.AQxxxx..xx 8x.9.KQJT8xx.QJT 0.06419 \\n 2D-P-P-X-P-P-P (7.8)  \\n 2D-P-P-X-P-P-4D-P-P-4S-P-P-P (12.5) ',\n",
+       " 'KQJx.AQ8x..A8xxx x.JT.A9xxxx.Kxxx AT9xxx.Kxxxxx..9 8x.9.KQJT8xx.QJT 0.05817 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-4D-P-P-4S-P-P-P (12.5) ',\n",
+       " 'Q9xx.AKxx..AK9xx KT.8x.A9xxxx.8xx AJxxx.QJTxxx..xx 8x.9.KQJT8xx.QJT 0.04053 \\n 2D-P-P-X-P-P-P (8.2)  \\n 2D-P-P-X-P-P-4D-P-P-4S-P-P-P (12.4) ',\n",
+       " 'Kxx.AQxx..AK98xx ATx.8.A9xxxx.xxx QJ9xx.KJTxxxx..x 8x.9.KQJT8xx.QJT 0.03538 \\n 2D-P-P-X-P-P-P (9.1)  \\n 2D-P-P-X-P-P-4D-P-P-4H-P-P-P (12.1) ',\n",
+       " 'AQJx.KTx..AK8xxx Kx.xxx.A9xxxx.9x T9xxx.AQJ8xx..xx 8x.9.KQJT8xx.QJT 0.02696 \\n 2D-P-P-X-P-P-P (8.9)  \\n 2D-P-P-X-P-P-4D-P-P-4H-P-P-P (12.1) ',\n",
+       " 'AKQ9.AKT8..xxxxx T.Jxx.A9xxxx.K98 Jxxxxx.Qxxxx..Ax 8x.9.KQJT8xx.QJT 0.02481 \\n 2D-P-P-X-P-P-P (9.7)  \\n 2D-P-P-X-P-P-4D-P-P-4S-P-P-P (12.0) ',\n",
+       " 'JTx.AKTxx..AK9xx Qxx.xx.A9xxxx.xx AK9xx.QJ8xx..8xx 8x.9.KQJT8xx.QJT 0.02480 \\n 2D-P-P-X-P-P-P (8.4)  \\n 2D-P-P-X-P-P-4D-P-P-X-P-P-P (8.4) ',\n",
+       " 'AK9.KQJx..AK9xxx Jxx.A8x.A9xxxx.8 QTxxx.Txxxx..xxx 8x.9.KQJT8xx.QJT 0.02026 \\n 2D-P-P-X-P-P-P (9.7)  \\n 2D-P-P-X-P-P-4D-X-P-P-P (9.7) ',\n",
+       " 'AKTx.AJxx..Kxxxx Jx.Qx.A9xxxx.A8x Q9xxx.KT8xxx..9x 8x.9.KQJT8xx.QJT 0.01972 \\n 2D-P-P-X-P-P-P (9.7)  \\n 2D-P-P-X-P-P-4D-P-P-P (9.7) ',\n",
+       " 'Axx.AKxx..A8xxxx Jx.JTx.A9xxxx.Kx KQT9xx.Q8xxx..9x 8x.9.KQJT8xx.QJT 0.01859 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-4D-P-P-4S-P-P-P (11.8) ']"
       ]
      },
      "execution_count": 4,
@@ -212,24 +216,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8x.9.KQJT8xx.QJT x.J8xxx.9xxx.Kxx AKQJ9.AKxx..A9xx Txxxx.QTx.Ax.8xx\n",
-      "8x.9.KQJT8xx.QJT K9xx.J8xx.9x.8xx AQJTx.AKTx..AKxx xx.Qxxx.Axxx.9xx\n",
-      "8x.9.KQJT8xx.QJT Tx.QJxx.9x.98xxx AKQ9xx.K8xx.Ax.A Jxx.ATxx.xx.Kxxx\n",
-      "8x.9.KQJT8xx.QJT KQ9.xxx.xx.xxxxx AJxxxx.AKT8.A9.K Tx.QJxxx.xx.A98x\n",
-      "8x.9.KQJT8xx.QJT 9.xxxx.9xxx.K8xx AKQJTx.AQ8x.Ax.x xxxx.KJTx..A9xxx\n",
-      "8x.9.KQJT8xx.QJT JTx.8xx.9x.Axxxx AKQxx.AKQJ.Axx.x 9xx.Txxxx.x.K98x\n",
-      "8x.9.KQJT8xx.QJT J9x.QJ8xx.x.9xxx AKQTxx.AKTx.9x.A xx.xxx.Axx.K8xxx\n",
-      "8x.9.KQJT8xx.QJT J9x.T8xx.A9xx.8x AKxxx.AKJx..AK9x QTx.Qxxx.xx.xxxx\n",
-      "8x.9.KQJT8xx.QJT x.JT8x.9x.Kxxxxx KQJxx.AKxx.Axx.A AT9xx.Qxxx.x.98x\n",
-      "8x.9.KQJT8xx.QJT Txx.K8xxx.9xx.8x AKQJ9x.AQJx.A.xx xx.Txx.xx.AK9xxx\n"
+      "8x.9.KQJT8xx.QJT JTxxx.JTxx.x.Kxx AKQ9.AKQx.Ax.A8x xx.8xxx.9xx.9xxx\n",
+      "8x.9.KQJT8xx.QJT 9xxx.KTxxx.x.xxx AKTx.AJ8x.A9.AKx QJx.Qxx.xxx.98xx\n",
+      "8x.9.KQJT8xx.QJT KJT9.T8xxx..98xx AQxx.KQ.Axx.AKxx xxx.AJxxx.9xx.xx\n",
+      "8x.9.KQJT8xx.QJT J9x.Q8xxx.xx.9xx AKQT.AKxx.x.AK8x xxxx.JTx.A9x.xxx\n",
+      "8x.9.KQJT8xx.QJT Qxxx.QTxx.x.9xxx AKJx.KJ8x.Ax.AKx T9x.Axxx.9xx.8xx\n",
+      "8x.9.KQJT8xx.QJT QJxx.AJxx.9x.98x AK9x.KQT.Ax.AKxx Txx.8xxxx.xx.xxx\n",
+      "8x.9.KQJT8xx.QJT QTxx.QJT8x.x.8xx AKJx.Kxx.A9.AKxx 9xx.Axxx.xxx.9xx\n",
+      "8x.9.KQJT8xx.QJT xx.QJTxx.x.8xxxx AKxx.Axx.Ax.AKxx QJT9x.K8xx.9xx.9\n",
+      "8x.9.KQJT8xx.QJT Txx.KTxxx.xx.xxx AKJx.A8x.A9.AK9x Q9xx.QJxx.xx.8xx\n",
+      "8x.9.KQJT8xx.QJT KTxx.AJTxx.xx.xx AQJ9.x.A9x.AKxxx xxx.KQ8xxx.x.98x\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"])\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"],0)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
    ]
