--- a/UCBC 2024/Simulations/Bidding4HX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4HX.ipynb
@@ -101,7 +101,7 @@
     "hand = 'K6.98432.KQ.AT52'\n",
     "\n",
     "auction = ['PAD_START', 'PAD_START', '1H', 'PASS']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
