--- a/UCBC 2024/Simulations/Bidding4SX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4SX.ipynb
@@ -51,11 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -85,8 +86,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '1S', 'insta_score': 0.713, 'expected_score': 38, 'adjustment': 36},\n",
-       " {'call': '2S', 'insta_score': 0.281, 'expected_score': 33, 'adjustment': 14}]"
+       "[{'call': '1S', 'insta_score': 0.755, 'expected_score': 70, 'adjustment': 38},\n",
+       " {'call': '2S', 'insta_score': 0.241, 'expected_score': 31, 'adjustment': 12}]"
       ]
      },
      "execution_count": 3,
@@ -109,7 +110,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"PASS\", \"PASS\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -126,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.942}]"
+       "[{'call': 'PASS', 'insta_score': 0.944}]"
       ]
      },
      "execution_count": 4,
@@ -150,16 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "['KJxxxx.9.A.QJT8x Axx.AJ8xxx.KJx.x QT.KTxx.9x.K9xxx 98.Qx.QT8xxxx.Ax 0.21122',\n",
-       " 'KJxxxx.9.A.QJT8x A.AK8xxxx.8x.A9x QT.JTxx.T9xx.xxx 98xx.Q.KQJxxx.Kx 0.15015',\n",
-       " 'KJxxxx.9.A.QJT8x Ax.KQxxxx.Kxx.A9 8x.T8xx.Q9.Kxxxx QT9.AJ.JT8xxxx.x 0.14997',\n",
-       " 'KJxxxx.9.A.QJT8x Axx.AQT8x.KJ.Kxx T9.Jxxxx.xxx.A9x Q8.Kx.QT98xxx.xx 0.14625',\n",
-       " 'KJxxxx.9.A.QJT8x A9.KQT8xx.9x.Axx T8.Axxx.K8x.9xxx Qxx.Jx.QJTxxxx.K 0.14361',\n",
-       " 'KJxxxx.9.A.QJT8x 98.AKJ8xxx.Q8.Ax T.QTx.Txxx.Kxxxx AQxx.xx.KJ9xxx.9 0.14015',\n",
-       " 'KJxxxx.9.A.QJT8x AQ.A8xxxx.Kx.xxx T8x.QJTx.QTx.K9x 9x.Kx.J98xxxx.Ax 0.12611',\n",
-       " 'KJxxxx.9.A.QJT8x A8x.KJTxx.Kx.K9x Tx.AQ8xx.Jxx.xxx Q9.xx.QT98xxx.Ax 0.12165',\n",
-       " 'KJxxxx.9.A.QJT8x ATx.KT8xxx.KQ.Kx 8x.Qxxx.xxx.Axxx Q9.AJ.JT98xxx.9x 0.12052',\n",
-       " 'KJxxxx.9.A.QJT8x Qx.KQJTxx.KJ.K9x A98.A8xx.8xx.xxx Tx.xx.QT9xxxx.Ax 0.11876']"
+       "[]"
       ]
      },
      "execution_count": 5,
@@ -174,19 +166,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d7bb325c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS',\n",
-       "  'insta_score': 0.998,\n",
-       "  'expected_score': -91,\n",
-       "  'adjustment': 50},\n",
-       " {'call': '4S',\n",
-       "  'insta_score': 0.002,\n",
-       "  'expected_score': -478,\n",
-       "  'adjustment': -1433}]"
+       "[{'call': 'PASS', 'insta_score': 0.999}, {'call': 'X', 'insta_score': 0.0}]"
       ]
      },
      "execution_count": 6,
@@ -211,24 +197,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KJxxxx.9.A.QJT8x AQx.JTxxx.xxx.xx x.AQ8x.QT9xx.A9x T98.Kxx.KJ8x.Kxx\n",
-      "KJxxxx.9.A.QJT8x Q8x.JTxxx.Kxx.Kx T.A8xx.QT98x.Axx A9x.KQx.Jxxx.9xx\n",
-      "KJxxxx.9.A.QJT8x QT8.ATxx.Txx.Kxx 9.KQxx.KQ8xx.A9x Axx.J8xx.J9xx.xx\n",
-      "KJxxxx.9.A.QJT8x T9x.AQTx.T9xx.Kx x.Jxxx.KJ8xx.Axx AQ8.K8xx.Qxx.9xx\n",
-      "KJxxxx.9.A.QJT8x A8x.J8xxx.xx.Kxx 9.AKQx.QJT8x.Axx QTx.Txx.K9xxx.9x\n",
-      "KJxxxx.9.A.QJT8x Q8x.JTxxx.9xx.Kx x.AK8x.KQ8xx.A9x AT9.Qxx.JTxx.xxx\n",
-      "KJxxxx.9.A.QJT8x AT9.J8xxx.Kx.xxx Q.ATxx.QJ9xxx.Ax 8xx.KQx.T8xx.K9x\n",
-      "KJxxxx.9.A.QJT8x ATx.KJxxx.Q9x.Ax 9.AQxx.Kxxxx.K9x Q8x.T8x.JT8x.xxx\n",
-      "KJxxxx.9.A.QJT8x QTx.Kxxxx.xx.9xx A.QJ8x.KT9xxxx.K 98x.ATx.QJ8.Axxx\n",
-      "KJxxxx.9.A.QJT8x T8x.AKT8x.xx.A9x Q.xxxx.KJxxx.Kxx A9x.QJx.QT98x.xx\n"
+      "KJxxxx.9.A.QJT8x Q98.ATx.K9x.xxxx T.KJxx.Qxxx.AK9x Axx.Q8xxx.JT8xx.\n",
+      "KJxxxx.9.A.QJT8x Q98.A8xx.Txxx.9x T.KTxx.KQJ8x.Axx Axx.QJxx.9xx.Kxx\n",
+      "KJxxxx.9.A.QJT8x A8x.JTxx.9xx.A9x 9.AQ8x.QJ8xx.Kxx QTx.Kxxx.KTxx.xx\n",
+      "KJxxxx.9.A.QJT8x Q8x.Qxx.xxxx.AKx A.KTxx.KQ98.9xxx T9x.AJ8xx.JTxx.x\n",
+      "KJxxxx.9.A.QJT8x Tx.xxxx.K9xx.9xx x.AKJx.J8xxx.AKx AQ98.QT8x.QTx.xx\n",
+      "KJxxxx.9.A.QJT8x A98.K8x.9xx.Kxxx x.QJxx.KJTxx.A9x QTx.ATxxx.Q8xx.x\n",
+      "KJxxxx.9.A.QJT8x AQT.Q8xxx.8xx.xx .Kxxx.KQTxxx.K9x 98xx.AJT.J9x.Axx\n",
+      "KJxxxx.9.A.QJT8x QTx.KQxx.98xx.xx x.AJT8.KQJxx.9xx A98.xxxx.Txx.AKx\n",
+      "KJxxxx.9.A.QJT8x A98.Txxx.xxx.9xx T.AJ8x.KQJ8x.AKx Qxx.KQxx.T9xx.xx\n",
+      "KJxxxx.9.A.QJT8x 98x.A8xx.KQJx.Kx T.KQJx.98xx.A9xx AQx.Txxx.Txxx.xx\n",
+      "KJxxxx.9.A.QJT8x 9x.QTxxx.9xx.Kxx Q.AK8x.KJxx.A9xx AT8x.Jxx.QT8xx.x\n",
+      "KJxxxx.9.A.QJT8x QT8.AQxx.8xxx.9x x.KT8x.KT9xx.Axx A9x.Jxxx.QJx.Kxx\n",
+      "KJxxxx.9.A.QJT8x Tx.AQJTx.JT9x.Kx A.K8xx.KQ8xx.xxx Q98x.xxx.xxx.A9x\n",
+      "KJxxxx.9.A.QJT8x AT9.T8x.KQ9x.K9x x.AQxx.Txxxx.Axx Q8x.KJxxx.J8x.xx\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"])\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"],0)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
    ]
