--- a/UCBC 2024/Simulations/Bidding5D.ipynb
+++ b/UCBC 2024/Simulations/Bidding5D.ipynb
@@ -51,11 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -85,13 +86,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '3D', 'insta_score': 0.365, 'expected_score': -80, 'adjustment': 18},\n",
+       "[{'call': '4D', 'insta_score': 0.114, 'expected_score': -18, 'adjustment': 6},\n",
+       " {'call': '3D', 'insta_score': 0.347, 'expected_score': -37, 'adjustment': 17},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.266,\n",
-       "  'expected_score': -81,\n",
-       "  'adjustment': 13},\n",
-       " {'call': 'X', 'insta_score': 0.123, 'expected_score': -140, 'adjustment': 6},\n",
-       " {'call': '4D', 'insta_score': 0.128, 'expected_score': -178, 'adjustment': 6}]"
+       "  'insta_score': 0.173,\n",
+       "  'expected_score': -59,\n",
+       "  'adjustment': 9},\n",
+       " {'call': '2N', 'insta_score': 0.156, 'expected_score': -75, 'adjustment': 8},\n",
+       " {'call': '5D', 'insta_score': 0.136, 'expected_score': -279, 'adjustment': 7}]"
       ]
      },
      "execution_count": 3,
@@ -114,7 +116,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = [\"PAD_START\", \"1H\", \"1N\", \"2S\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 1, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -125,25 +127,32 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ce89b968",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['J.J8x.A98xxx.Txx A9x.Kxxxx.Tx.Kxx K8.AQT.Jxx.AJ8xx QTxxxxx.9x.KQ.Q9 0.43463 \\n 1H-1N-2S-3D-P-P-4S-P-P-P (7.6)  \\n 1H-1N-2S-P-P-3C-3S-4D-P-P-P (10.5)  \\n 1H-1N-2S-4D-P-P-P (10.5)  \\n 1H-1N-2S-X-P-3C-X-P-P-P (9.4) ',\n",
-       " 'J.J8x.A98xxx.Txx K.AQT9xx.JT.J9xx Q9xx.Kx.KQx.KQ8x AT8xxxx.xx.xx.Ax 0.39905 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-4D-P-P-P (9.3)  \\n 1H-1N-2S-X-3H-P-P-4D-X-P-P-P (9.3) ',\n",
-       " 'J.J8x.A98xxx.Txx T8x.AKxxxx.T.QJx Kx.QT9x.QJxx.AK9 AQ9xxxx..Kx.8xxx 0.38197 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-P-3D-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (6.1)  \\n 1H-1N-2S-X-P-P-P (10.0) ',\n",
-       " 'J.J8x.A98xxx.Txx 98.AKTxxx.Tx.QJx AKx.Q9x.KQJx.xxx QTxxxxx.x.x.AK98 0.35863 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-P-P (7.7)  \\n 1H-1N-2S-X-3H-P-4S-P-P-P (10.0) ',\n",
-       " 'J.J8x.A98xxx.Txx A.KQTxxx.Jx.J9xx KT8x.A9x.KQx.A8x Q9xxxxx.x.Tx.KQx 0.35815 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.1)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (9.1)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (5.9)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (9.1) ',\n",
-       " 'J.J8x.A98xxx.Txx Qx.AKQTxxx.x.xxx A9x.9x.KQJx.KQ8x KT8xxxx.x.Tx.AJ9 0.35181 \\n 1H-1N-2S-3D-4H-P-P-P (9.7)  \\n 1H-1N-2S-P-4H-P-P-P (9.7)  \\n 1H-1N-2S-4D-4H-P-P-P (9.7)  \\n 1H-1N-2S-X-4H-P-P-P (9.7) ',\n",
-       " 'J.J8x.A98xxx.Txx Tx.AQxxxx.Tx.Axx A8xx.K9.KJxx.KJx KQ9xxx.Tx.Q.Q98x 0.32955 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (10.0)  \\n 1H-1N-2S-P-3H-P-P-4D-X-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-P-P (10.0)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (10.0) ',\n",
-       " 'J.J8x.A98xxx.Txx Ax.QT9xxx.Jx.AJx T8x.AKx.KQTx.K8x KQ9xxxx.x.x.Q9xx 0.32343 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (5.8)  \\n 1H-1N-2S-X-3H-P-4S-P-P-P (9.9) ',\n",
-       " 'J.J8x.A98xxx.Txx Qx.AQT9xx.x.QJ9x KTx.xx.KQxx.AKxx A98xxxx.Kx.JT.8x 0.31673 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-P-4H-P-P-P (9.4)  \\n 1H-1N-2S-4D-4H-P-P-P (9.4)  \\n 1H-1N-2S-X-3H-P-P-4D-X-P-P-P (9.3) ',\n",
-       " 'J.J8x.A98xxx.Txx Q8x.Qxxxx.Qx.KQJ Kx.AT9.KJTxx.A98 AT9xxxx.Kx..xxxx 0.30422 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.6)  \\n 1H-1N-2S-P-P-3D-3S-4D-P-P-P (9.5)  \\n 1H-1N-2S-4D-P-P-P (9.6)  \\n 1H-1N-2S-X-P-P-P (9.9) ',\n",
-       " 'J.J8x.A98xxx.Txx xx.K9xxxx.T.AKJ8 KQ8.ATx.KQxx.Q9x AT9xxxx.Q.Jx.xxx 0.29089 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (8.5)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (8.5)  \\n 1H-1N-2S-4D-4H-P-P-P (8.0)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (8.5) ',\n",
-       " 'J.J8x.A98xxx.Txx Txx.KQT9xx.T.KQJ Kx.Axxx.KJxx.A8x AQ98xxx..Qx.9xxx 0.26388 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.1)  \\n 1H-1N-2S-P-3D-P-4S-P-P-P (10.1)  \\n 1H-1N-2S-4D-4H-P-P-P (7.5)  \\n 1H-1N-2S-X-P-P-P (10.1) ',\n",
-       " 'J.J8x.A98xxx.Txx T9.KQT9xx.x.AJ98 Axx.Ax.KTxx.KQxx KQ8xxxx.xx.QJ.xx 0.26233 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (10.7)  \\n 1H-1N-2S-P-4H-P-P-P (7.6)  \\n 1H-1N-2S-4D-P-P-P (10.7)  \\n 1H-1N-2S-X-4H-P-P-P (7.6) ',\n",
-       " 'J.J8x.A98xxx.Txx x.AKxxx.Txx.AJ9x AQTx.T9x.KQJx.Kx K98xxxx.Qx..Q8xx 0.25313 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8.5)  \\n 1H-1N-2S-P-P-P (9.0)  \\n 1H-1N-2S-4D-P-P-P (8.5)  \\n 1H-1N-2S-X-P-3D-P-P-P (8.6) ']"
+       "['J.J8x.A98xxx.Txx A8x.A9xxx.JT.Q8x Qx.KQTx.xxx.AKJx KT9xxxx.x.KQ.9xx 0.73409 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8.8)  \\n 1H-1N-2S-P-P-X-P-3D-3S-P-P-4D-P-P-P (8.8)  \\n 1H-1N-2S-2N-P-P-P (5.3)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.8)  \\n 1H-1N-2S-4D-P-P-P (8.8) ',\n",
+       " 'J.J8x.A98xxx.Txx Kxx.KT9xx.x.AJ9x Qx.AQxx.KJx.K8xx AT98xxx.x.QTx.Qx 0.70590 \\n 1H-1N-2S-3D-3S-4D-4S-5D-P-P-X-P-P-P (9.0)  \\n 1H-1N-2S-P-P-X-P-3D-3S-P-P-4D-P-P-P (9.0)  \\n 1H-1N-2S-2N-P-P-P (5.0)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.0)  \\n 1H-1N-2S-4D-P-P-P (9.0) ',\n",
+       " 'J.J8x.A98xxx.Txx KTx.QT9xx.x.AJxx 8x.AKxx.QJTx.KQx AQ9xxxx.x.Kx.98x 0.62963 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-4S-P-P-P (9.6)  \\n 1H-1N-2S-P-P-X-P-3D-3S-P-P-4D-P-P-P (9.9)  \\n 1H-1N-2S-2N-P-P-3S-4D-P-P-4S-P-P-P (9.6)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.9)  \\n 1H-1N-2S-4D-P-P-4S-P-P-P (9.6) ',\n",
+       " 'J.J8x.A98xxx.Txx 9.AQT9xx.KT.Q8xx K8xx.Kx.QJx.AK9x AQTxxxx.xx.xx.Jx 0.61171 \\n 1H-1N-2S-3D-3H-P-4H-P-P-P (8.2)  \\n 1H-1N-2S-P-3H-P-4H-P-P-P (8.2)  \\n 1H-1N-2S-2N-P-P-P (7.0)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.2)  \\n 1H-1N-2S-4D-4H-P-P-P (8.2) ',\n",
+       " 'J.J8x.A98xxx.Txx 9.QTxxxxx.QT.AKx ATxx.AK9.Kx.J8xx KQ8xxxx..Jxx.Q9x 0.60898 \\n 1H-1N-2S-3D-4H-P-4S-P-P-P (8.0)  \\n 1H-1N-2S-P-4H-P-P-P (6.2)  \\n 1H-1N-2S-2N-3H-P-4S-P-P-P (8.0)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.1)  \\n 1H-1N-2S-4D-4H-P-P-P (6.2) ',\n",
+       " 'J.J8x.A98xxx.Txx 8x.AQTxxx.J.Kxxx Axxx.K9x.KT.AJ8x KQT9xx.x.Qxxx.Q9 0.59944 \\n 1H-1N-2S-3D-P-P-P (8.3)  \\n 1H-1N-2S-P-P-P (8.1)  \\n 1H-1N-2S-2N-P-P-P (6.9)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.3)  \\n 1H-1N-2S-4D-P-P-P (8.3) ',\n",
+       " 'J.J8x.A98xxx.Txx T8.AQxxx.Tx.A8xx Kxx.K9x.KQJx.KQ9 AQ9xxxx.Tx.x.Jxx 0.59906 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8.9)  \\n 1H-1N-2S-P-P-P (9.0)  \\n 1H-1N-2S-2N-P-P-P (5.7)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.9)  \\n 1H-1N-2S-4D-P-P-P (8.9) ',\n",
+       " 'J.J8x.A98xxx.Txx Qx.A9xxxxx.Qx.K9 AK9.KT.KJxx.J8xx T8xxxxx.Q.T.AQxx 0.53479 \\n 1H-1N-2S-3D-4H-P-P-P (7.6)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-2N-3H-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.5)  \\n 1H-1N-2S-4D-P-P-P (8.5) ',\n",
+       " 'J.J8x.A98xxx.Txx xx.KQT9xx.x.KQ9x A9x.Axx.KQJx.J8x KQT8xxx.x.Tx.Axx 0.52501 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-4S-P-P-P (9.5)  \\n 1H-1N-2S-P-P-P (9.5)  \\n 1H-1N-2S-2N-P-P-3S-4D-P-P-4S-P-P-P (9.5)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.5)  \\n 1H-1N-2S-4D-P-P-4S-P-P-P (9.5) ',\n",
+       " 'J.J8x.A98xxx.Txx 8x.QT9xxxx.KQx.K AKx.AKx.Tx.Q98xx QT9xxxx..Jx.AJxx 0.52229 \\n 1H-1N-2S-3D-4H-P-4S-P-P-P (8.8)  \\n 1H-1N-2S-P-4H-P-P-P (6.6)  \\n 1H-1N-2S-2N-3H-P-4S-P-P-P (8.8)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (7.2)  \\n 1H-1N-2S-4D-4H-P-P-P (6.6) ',\n",
+       " 'J.J8x.A98xxx.Txx Qxx.Txxxx.x.AKJx T9.AKQ.KJTx.Q98x AK8xxxx.9x.Qx.xx 0.51351 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.7)  \\n 1H-1N-2S-P-P-X-P-3D-3S-P-P-4D-P-P-P (9.7)  \\n 1H-1N-2S-2N-P-P-3S-4D-P-P-P (9.7)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.7)  \\n 1H-1N-2S-4D-P-P-P (9.7) ',\n",
+       " 'J.J8x.A98xxx.Txx Ax.AQ9xxx.xxx.8x 8xxx.KTx.KJ.AKJx KQT9xx.x.QT.Q9xx 0.48892 \\n 1H-1N-2S-3D-P-P-P (8.9)  \\n 1H-1N-2S-P-3H-P-P-4D-X-P-P-P (8.9)  \\n 1H-1N-2S-2N-P-P-P (5.2)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.9)  \\n 1H-1N-2S-4D-P-P-P (8.9) ',\n",
+       " 'J.J8x.A98xxx.Txx 8x.AKQTxx.T.Q9xx AKx.xx.KJxx.KJ8x QT9xxxx.9x.Qx.Ax 0.48432 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-P-3H-P-4H-P-P-P (8.8)  \\n 1H-1N-2S-2N-P-P-P (5.5)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.3)  \\n 1H-1N-2S-4D-4H-P-P-P (8.8) ',\n",
+       " 'J.J8x.A98xxx.Txx A8x.KTxxx.Tx.Kxx Qxx.Axx.KQJ.QJ98 KT9xxx.Q9.xx.Axx 0.47869 \\n 1H-1N-2S-3D-P-P-P (8.3)  \\n 1H-1N-2S-P-P-P (9.1)  \\n 1H-1N-2S-2N-P-P-P (5.5)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.3)  \\n 1H-1N-2S-4D-P-P-X-P-P-P (8.3) ',\n",
+       " 'J.J8x.A98xxx.Txx xx.AQT9xx.JTx.Ax KQx.Kxx.KQ.Q98xx AT98xxx.x.xx.KJx 0.46409 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (9.5)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (9.5)  \\n 1H-1N-2S-2N-P-P-3S-4D-P-P-P (6.7)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (6.7)  \\n 1H-1N-2S-4D-P-P-P (6.7) ',\n",
+       " 'J.J8x.A98xxx.Txx T.AK9xxx.QTx.J8x AK8x.Qx.Jxx.AQxx Q9xxxxx.Tx.K.K9x 0.45410 \\n 1H-1N-2S-3D-P-P-P (8.1)  \\n 1H-1N-2S-P-2N-P-3S-P-4H-P-4S-P-P-P (7.7)  \\n 1H-1N-2S-2N-P-P-P (7.2)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.1)  \\n 1H-1N-2S-4D-P-P-P (8.1) ',\n",
+       " 'J.J8x.A98xxx.Txx QT.Qxxxx.KJx.Kxx A8x.AT9x.QTx.AJ8 K9xxxxx.K.x.Q9xx 0.44688 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.4)  \\n 1H-1N-2S-P-P-P (8.6)  \\n 1H-1N-2S-2N-P-P-P (7.3)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.4)  \\n 1H-1N-2S-4D-P-P-P (9.4) ',\n",
+       " 'J.J8x.A98xxx.Txx K8.9xxxx.QJx.AJ9 Axx.AKQT.Kxx.8xx QT9xxxx.x.T.KQxx 0.44107 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.2)  \\n 1H-1N-2S-P-P-P (9.7)  \\n 1H-1N-2S-2N-P-P-P (7.2)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (9.2)  \\n 1H-1N-2S-4D-P-P-P (9.2) ',\n",
+       " 'J.J8x.A98xxx.Txx 9xx.AQxxxx.KJx.9 KTx.KT9.QT.AKJ8x AQ8xxx.x.xx.Qxxx 0.43799 \\n 1H-1N-2S-3D-P-P-P (8.2)  \\n 1H-1N-2S-P-3C-P-3S-P-4S-P-P-P (9.1)  \\n 1H-1N-2S-2N-P-3C-P-P-P (8.1)  \\n 1H-1N-2S-5D-P-P-X-P-P-P (8.2)  \\n 1H-1N-2S-4D-P-P-P (8.2) ',\n",
+       " 'J.J8x.A98xxx.Txx .AKT9xxx.KTx.9xx AKx.Qxx.Jx.AQJxx QT98xxxxx..Qx.K8 0.42937 \\n 1H-1N-2S-3D-4H-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-P-4H-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-2N-4H-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-5D-P-P-P (7.0)  \\n 1H-1N-2S-4D-4H-P-P-P (7.3) ']"
       ]
      },
      "execution_count": 4,
@@ -165,10 +174,13 @@
      "data": {
       "text/plain": [
        "[{'call': 'PASS',\n",
-       "  'insta_score': 0.554,\n",
-       "  'expected_score': -249,\n",
-       "  'adjustment': 28},\n",
-       " {'call': 'X', 'insta_score': 0.404, 'expected_score': -333, 'adjustment': 20}]"
+       "  'insta_score': 0.559,\n",
+       "  'expected_score': 342,\n",
+       "  'adjustment': 279},\n",
+       " {'call': '5D',\n",
+       "  'insta_score': 0.354,\n",
+       "  'expected_score': -1948,\n",
+       "  'adjustment': 177}]"
       ]
      },
      "execution_count": 5,
@@ -216,16 +228,16 @@
     {
      "data": {
       "text/plain": [
-       "['QT9xxxx..KT.Q8xx J.J8x.A98xxx.Txx Axx.ATxxx.xx.KJx K8.KQ9xx.QJx.A9x 0.30275 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.2) ',\n",
-       " 'AQ9xxx.x.Q.J8xxx J.J8x.A98xxx.Txx Txx.KQ9xx.x.KQ9x K8x.ATxx.KJTxx.A 0.25517 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.2) ',\n",
-       " 'AT9xxx.x.KJTx.8x J.J8x.A98xxx.Txx K8xx.KT9xx.x.Axx Qx.AQxx.Qx.KQJ9x 0.24481 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.9) ',\n",
-       " 'AT9xxx.x.x.AJ9xx J.J8x.A98xxx.Txx KQ8x.KQTxxx.x.8x xx.A9x.KQJTx.KQx 0.24111 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11.4)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11.4) ',\n",
-       " 'KTxxxx.x.KQxx.xx J.J8x.A98xxx.Txx Qxx.KQTxx.x.KJxx A98.A9xx.JT.AQ98 0.23162 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (7.7)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (7.7) ',\n",
-       " 'AKT8xxx.x.xxx.xx J.J8x.A98xxx.Txx xxx.Q9xxxx..AKQ9 Q9.AKT.KQJT.J8xx 0.21738 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.6) ',\n",
-       " 'Qxxxxx.A.Qx.J8xx J.J8x.A98xxx.Txx KTx.QTxxx.x.KQ9x A98.K9xx.KJTx.Ax 0.20631 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.4)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.4) ',\n",
-       " 'QT8xxxx..T.KQxxx J.J8x.A98xxx.Txx Kxx.KTxxxx.J.AJx A9.AQ9x.KQxxx.98 0.19191 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11.0)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11.0) ',\n",
-       " 'KT8xxx.9x.Tx.AJx J.J8x.A98xxx.Txx AQx.KTxxxx.Jx.9x 9xx.AQ.KQx.KQ8xx 0.18954 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (8.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (8.6) ',\n",
-       " 'Q98xxxxx..QT.K8x J.J8x.A98xxx.Txx AKx.Txxxxx.Kx.9x T.AKQ9.Jxx.AQJxx 0.18436 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.6) ']"
+       "['J.J8x.A98xxx.Txx xxx.AKQTx.xx.K8x AK.xxx.KQJx.Q9xx QT98xxx.9x.T.AJx 0.31800 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.1)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (4.6) ',\n",
+       " 'J.J8x.A98xxx.Txx AQx.AT9xx.xx.98x Tx.KQx.KJTx.AKxx K98xxxx.xx.Q.QJx 0.31280 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (4.0)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (2.0) ',\n",
+       " 'J.J8x.A98xxx.Txx 9xx.AQTxx.Kx.AJx Ax.K9xx.QJTx.KQx KQT8xxx.x.x.98xx 0.30995 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.8)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (3.0) ',\n",
+       " 'J.J8x.A98xxx.Txx Kxx.AKxxx.Jx.98x Ax.QTx.KQTxx.AJx QT98xxx.9x..KQxx 0.30279 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.8)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (2.9) ',\n",
+       " 'J.J8x.A98xxx.Txx Kxx.Kxxxx.xx.A9x T8x.AQ9.KQJx.KJx AQ9xxx.Tx.T.Q8xx 0.29800 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (4.2)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (2.7) ',\n",
+       " 'J.J8x.A98xxx.Txx T9x.AKTxxx.J.Axx KQ.Q9xx.QTx.KQJ8 A8xxxxx..Kxx.9xx 0.29507 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.6)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (4.7) ',\n",
+       " 'J.J8x.A98xxx.Txx A9x.K9xxx.Q.Q8xx xx.AQTx.KJxx.AKx KQT8xxx.x.Tx.J9x 0.29490 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (4.6)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (1.1) ',\n",
+       " 'J.J8x.A98xxx.Txx KT9.9xxxxx.QJx.A Ax.AKQT.Kx.98xxx Q8xxxxx..Tx.KQJx 0.28855 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.8)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (3.5) ',\n",
+       " 'J.J8x.A98xxx.Txx QTx.AQTxx.K.J9xx Kx.xxx.QJTx.AKQx A98xxxx.K9.xx.8x 0.28842 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (2.7)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (3.4) ',\n",
+       " 'J.J8x.A98xxx.Txx 8xx.A9xxx.KT.Kxx KTx.KQTx.QJx.AJ8 AQ9xxx.x.xx.Q9xx 0.24154 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (3.0)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (3.9) ']"
       ]
      },
      "execution_count": 6,
@@ -257,24 +269,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J.J8x.A98xxx.Txx Q8xx.xxx.KQ.A8xx AKT9xx.AKQx.JT.K xx.T9x.xxx.QJ9xx\n",
-      "J.J8x.A98xxx.Txx x.9x.JTx.AJ98xxx AKQTxx.AKxx.xx.K 98xxx.QTxx.KQ.Qx\n",
-      "J.J8x.A98xxx.Txx 8xxx.9.Txx.AJ9xx AQT9xx.AKTx.KJ.Q Kx.Qxxxx.Qx.K8xx\n",
-      "J.J8x.A98xxx.Txx 98x.T9x.JTx.AQxx AKQTxxx.AKQx.x.J xx.xxx.KQx.K98xx\n",
-      "J.J8x.A98xxx.Txx 8xx.Q9x.QJx.J8xx AKQxxxx.AKTx.K.x T9.xxx.Txx.AKQ9x\n",
-      "J.J8x.A98xxx.Txx QTx.T9xxx.xx.KQJ AK98xx.AKQx.K.xx xxx.x.QJTx.A98xx\n",
-      "J.J8x.A98xxx.Txx T.QTxx.Txx.KQ8xx AQxxxxx.AK9x.K.A K98x.xx.QJx.J9xx\n",
-      "J.J8x.A98xxx.Txx KTxx.Qxx.JTxx.9x AQ98xx.AK9x..AKx xx.Txx.KQx.QJ8xx\n",
-      "J.J8x.A98xxx.Txx 9xx.Txx.KJxx.AKx AKQ8xx.AKQx..Q98 Txx.9xx.QTx.Jxxx\n",
-      "J.J8x.A98xxx.Txx K9xx.T9x.Qx.Jxxx AQTxxxx.AKxx.K.K 8.Qxx.JTxx.AQ98x\n"
+      "J.J8x.A98xxx.Txx 8xxx.9xx.Qx.J8xx AKQ9xx.AQ.x.AKQx Tx.KTxxx.KJTx.9x\n",
+      "J.J8x.A98xxx.Txx 98xx.KT9x.Qx.K9x AKQxx.AQ.Tx.AQJx Txx.xxxx.KJx.8xx\n",
+      "J.J8x.A98xxx.Txx 9xxx.QTxxx.Qx.Qx AKQ8xx.AKx.x.AK9 Tx.9x.KJTx.J8xxx\n",
+      "J.J8x.A98xxx.Txx T9x.QTxx.KQ.K9xx AKQ8xx.AK9.J.AJx xxx.xxx.Txxx.Q8x\n",
+      "J.J8x.A98xxx.Txx Kx.Txxx.Txx.K9xx AQT98x.AKQ9.J.AJ xxxx.xx.KQx.Q8xx\n",
+      "J.J8x.A98xxx.Txx 8xxx.Txx.KJT.AJx AKQ9x.AKQx.Qx.Q9 Txx.9xx.xx.K8xxx\n",
+      "J.J8x.A98xxx.Txx xxx.Txx.Kxx.A9xx AKTxx.AKQ9.J.KQx Q98x.xxx.QTx.J8x\n",
+      "J.J8x.A98xxx.Txx Kx.KQT9xx.KTx.9x AQxxxx.A.QJ.AKQx T98x.xxx.xx.J8xx\n",
+      "J.J8x.A98xxx.Txx Q9x.Q9xxx.xx.9xx ATxxx.AKT.KJ.AQJ K8xx.xx.QTx.K8xx\n",
+      "J.J8x.A98xxx.Txx 8xx.Kxxx.Jx.KJ8x AKQxxx.AQx.Kx.AQ T9x.T9x.QTx.9xxx\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"])\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"],0)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
    ]
