--- a/UCBC 2024/Simulations/BiddingCrazy.ipynb
+++ b/UCBC 2024/Simulations/BiddingCrazy.ipynb
@@ -60,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-2030000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hands = ['T.A2.QT9763.QJ97','98743.KJ3.J52.A8','KJ52.9854.A.K653','AQ6.QT76.K84.T42']"
+    "hands = ['KQ9x.QJx.Kxx.Txx','8xxx.KT9xx..8xxx','JTx.8xx.AQJ98.AQ','Ax.Ax.Txxxx.KJ9x']"
    ]
   },
   {
@@ -107,80 +107,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([True, False], hand, models, sampler, i, False) for i, hand in enumerate(hands)]"
+    "bidder_bots = [BotBid([True, False], hand, models, sampler, i, 2, False) for i, hand in enumerate(hands)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7d77351a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "['PAD_START', 'PAD_START']\n",
-      "Bid not valid: PAD_END insta_score: 0.997 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS']\n",
-      "Bid not valid: PAD_END insta_score: 0.999 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS']\n",
-      "Bid not valid: PAD_END insta_score: 1.000 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS']\n",
-      "Bid not valid: PAD_END insta_score: 1.000 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS', '1S']\n",
-      "Bid not valid: PAD_END insta_score: 0.076 0.03\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.003}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.001}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.0}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': '1S', 'candidates': [{'call': 'PASS', 'insta_score': 0.0}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.768, 'expected_score': -95, 'adjustment': 38}, {'call': 'X', 'insta_score': 0.138, 'expected_score': -159, 'adjustment': 7}], 'samples': ['9x.JTxxx.QJx.Qxx AQ8xx.A.K8xx.JTx KJxx.98xx.A.Kxxx Tx.KQx.T9xxx.A98 0.99985 \\n P-P-P-1S-P-1N-P-2D-P-3D-P-P-P (9.4)  \\n P-P-P-1S-X-1N-2H-P-P-3D-P-P-3H-P-P-P (7.2) ', 'Tx.KQxx.J8xx.J8x A98xx.xx.KT9x.Ax KJxx.98xx.A.Kxxx Qx.AJT.Qxxx.QT9x 0.99573 \\n P-P-P-1S-P-1N-P-2D-P-3D-P-P-P (8.9)  \\n P-P-P-1S-X-XX-2H-P-P-X-P-P-P (7.3) ', 'T.Qxx.KQJxx.T8xx AQ98x.Jx.8xx.AJx KJxx.98xx.A.Kxxx xxx.AKTx.T9xx.Q9 0.99899 \\n P-P-P-1S-P-2S-P-P-P (7.6)  \\n P-P-P-1S-X-P-2D-P-P-2S-P-P-P (7.6) ', '8xx.JT.J8xx.AJ8x QT9xx.AQxx.K9x.Q KJxx.98xx.A.Kxxx A.Kxx.QTxxx.T9xx 0.99977 \\n P-P-P-1S-P-1N-P-2H-P-P-P (8.3)  \\n P-P-P-1S-X-1N-P-2H-P-P-P (8.3) ', 'x.KQTxx.98xxx.8x QT8xx.Ax.KTxx.Ax KJxx.98xx.A.Kxxx A9x.Jx.QJx.QJT9x 0.99537 \\n P-P-P-1S-P-2C-P-2S-P-3S-P-P-P (8.7)  \\n P-P-P-1S-X-XX-2H-P-P-2S-3H-3S-P-P-P (8.7) ', '8.QTxx.QJTxx.J9x AT9xxx.AJx.9xx.A KJxx.98xx.A.Kxxx Qx.Kx.K8xx.QT8xx 0.99920 \\n P-P-P-1S-P-1N-P-2S-P-3S-P-P-P (9.3)  \\n P-P-P-1S-X-XX-2H-2S-P-3H-P-4S-P-P-P (9.3) ', '8x.AJx.T98xx.JT9 QT9xx.K.KQJx.Q8x KJxx.98xx.A.Kxxx Ax.QTxxx.xxx.Axx 0.72865 \\n P-P-P-1S-P-2H-P-3N-P-P-P (7.9)  \\n P-P-P-1S-X-XX-2D-X-P-P-P (5.1) ', 'Q8.JTxxx.98xx.Qx AT9xx.AK.KJx.T8x KJxx.98xx.A.Kxxx xx.Qx.QTxxx.AJ9x 0.48804 \\n P-P-P-1S-P-1N-P-P-P (8.6)  \\n P-P-P-1S-X-1N-P-2N-P-P-P (8.6) ', '.JTxxx.QJxx.QJT9 T98xx.AK.T8xx.A8 KJxx.98xx.A.Kxxx AQxx.Qx.K9xx.xxx 0.99349 \\n P-P-P-1S-P-2C-P-2D-P-3S-P-P-P (9.2)  \\n P-P-P-1S-X-XX-2H-P-P-3H-P-3S-P-P-P (9.2) ', 'Q9.QJTx.xxx.T8xx Axxxx.Ax.KJTx.Jx KJxx.98xx.A.Kxxx T8.Kxx.Q98xx.AQ9 0.82786 \\n P-P-P-1S-P-1N-P-2D-P-3D-P-P-P (10.7)  \\n P-P-P-1S-X-XX-2H-P-P-P (5.9) '], 'hcp': [10.6, 4.4, 13.5], 'shape': [2.2, 3.1, 4.2, 3.4, 2.1, 3.4, 4.1, 3.4, 4.7, 2.5, 3.4, 2.2], 'who': 'Simulation'}\n",
-      "{'bid': '2C', 'candidates': [{'call': '3S', 'insta_score': 0.462}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.96}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n",
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.0}], 'samples': [], 'hcp': -1, 'shape': -1, 'who': 'NN'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS', '1S', 'PASS']\n",
-      "Bid not valid: PAD_END insta_score: 0.363 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS', '1S', 'PASS', '2C']\n",
-      "Bid not valid: PAD_END insta_score: 0.039 0.03\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS', '1S', 'PASS', '2C', 'PASS']\n",
-      "Bid not valid: PAD_END insta_score: 1.000 0.03\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.867, 'expected_score': 37, 'adjustment': 433}, {'call': 'X', 'insta_score': 0.109, 'expected_score': -54, 'adjustment': 55}], 'samples': ['A.xxx.T98xxxxx.x QT9xx.KTx.KQ.A98 KJxx.98xx.A.Kxxx 8xx.AQJ.Jx.QJTxx 0.02501 \\n P-P-P-1S-P-2C-P-P-P (7.4)  \\n P-P-P-1S-P-2C-P-P-X-P-P-P (7.4) ', '9.AKTx.98xxxx.Qx QT8xx.Qx.KQx.JTx KJxx.98xx.A.Kxxx Axx.Jxx.JTx.A98x 0.02228 \\n P-P-P-1S-P-2C-P-P-P (5.5)  \\n P-P-P-1S-P-2C-P-P-X-P-2D-2S-P-P-3D-P-P-3S-P-P-P (6.3) ', '.QTx.QT8xxxx.Jxx AQ98x.AJx.Jx.Q8x KJxx.98xx.A.Kxxx Txxx.Kxx.K9x.AT9 0.02178 \\n P-P-P-1S-P-2C-P-P-P (7.1)  \\n P-P-P-1S-P-2C-P-P-X-P-2D-P-P-2S-P-P-P (9.8) ', 'x.QJxx.Qxxxxx.Jx AQ8xx.ATx.K8.T8x KJxx.98xx.A.Kxxx T9x.Kx.JT9x.AQ9x 0.01503 \\n P-P-P-1S-P-2C-P-P-P (8.3)  \\n P-P-P-1S-P-2C-P-P-X-P-2D-P-P-2S-P-P-P (9.4) ', 'T9.QJxxx.Txxx.Jx AQxxx.Kx.Kxx.Q98 KJxx.98xx.A.Kxxx 8x.AT.QJ98x.ATxx 0.01483 \\n P-P-P-1S-P-2C-P-P-P (9.0)  \\n P-P-P-1S-P-2C-P-P-X-P-2H-P-P-P (7.2) ', 'x.Kxx.Q98xx.QJxx AQT8xxx.Tx.xxx.A KJxx.98xx.A.Kxxx 9.AQJx.KJTx.T98x 0.01351 \\n P-P-P-1S-P-2C-P-P-P (5.5)  \\n P-P-P-1S-P-2C-P-P-X-P-2D-2S-P-P-P (8.3) ', 'x.QJxxx.QJxxx.Qx QT98xxx.AT.8xx.A KJxx.98xx.A.Kxxx A.Kx.KT9x.JT98xx 0.01317 \\n P-P-P-1S-P-2C-P-P-P (8.3)  \\n P-P-P-1S-P-2C-P-P-X-P-2H-3S-P-P-P (9.6) ', '9.AKxxx.Q9xx.Txx AT8xx.QJ.Txx.QJ9 KJxx.98xx.A.Kxxx Qxx.Tx.KJ8xx.A8x 0.01228 \\n P-P-P-1S-P-2C-P-P-P (5.0)  \\n P-P-P-1S-P-2C-P-P-X-P-2H-P-P-2S-3H-P-P-P (9.0) ', 'x.QJTx.JT98x.AJx QT8xx.Ax.Qxxxx.Q KJxx.98xx.A.Kxxx A9x.Kxx.Kx.T98xx 0.00998 \\n P-P-P-1S-P-2C-P-P-P (5.6)  \\n P-P-P-1S-P-2C-P-P-X-P-2H-2S-P-P-3D-P-3H-P-P-P (8.3) ', 'x.QJT.QJ9xx.QTxx AQT98xx.Kxx.8x.J KJxx.98xx.A.Kxxx x.Axx.KTxxx.A98x 0.00956 \\n P-P-P-1S-P-2C-P-P-P (5.8)  \\n P-P-P-1S-P-2C-P-P-X-P-2D-2S-P-P-P (8.7) '], 'hcp': [12.1, 4.6, 11.8], 'shape': [2.6, 2.9, 3.8, 3.6, 1.8, 3.6, 4.5, 3.1, 4.6, 2.7, 3.3, 2.3], 'who': 'Simulation'}\n",
-      "['PAD_START', 'PAD_START', 'PASS', 'PASS', 'PASS', '1S', 'PASS', '2C', 'PASS', 'PASS', 'PASS']\n"
+      "{'bid': '1D', 'candidates': [{'call': '1D', 'insta_score': 1.0}], 'samples': [], 'hcp': [8.5, 9.5, 7.9], 'shape': [3.1, 3.3, 2.8, 3.7, 3.1, 3.1, 2.8, 3.8, 3.2, 3.2, 2.8, 3.7], 'who': 'NN'}\n",
+      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.999}], 'samples': [], 'hcp': [11.0, 9.5, 7.3], 'shape': [3.5, 3.4, 3.7, 2.5, 3.8, 3.9, 2.3, 2.9, 3.8, 3.6, 2.4, 3.1], 'who': 'NN'}\n",
+      "{'bid': '1S', 'candidates': [{'call': '1S', 'insta_score': 0.999}], 'samples': [], 'hcp': [9.5, 10.1, 9.6], 'shape': [3.0, 3.3, 3.2, 3.2, 3.1, 3.2, 3.2, 3.2, 3.1, 3.3, 3.2, 3.2], 'who': 'NN'}\n",
+      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.999}], 'samples': [], 'hcp': [11.7, 10.2, 13.8], 'shape': [3.3, 2.8, 3.5, 3.2, 3.3, 2.9, 3.2, 3.3, 2.7, 2.4, 5.2, 2.7], 'who': 'NN'}\n",
+      "{'bid': '1N', 'candidates': [{'call': '1N', 'insta_score': 1.0}], 'samples': [], 'hcp': [6.9, 12.9, 6.1], 'shape': [3.6, 3.9, 1.6, 3.8, 2.9, 2.9, 4.4, 2.9, 3.7, 3.6, 1.8, 3.9], 'who': 'NN'}\n",
+      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.999}], 'samples': [], 'hcp': [12.6, 6.2, 7.9], 'shape': [2.4, 3.9, 3.9, 2.9, 3.5, 4.1, 2.2, 3.3, 5.2, 3.1, 1.7, 3.0], 'who': 'NN'}\n",
+      "[0.26 0.5  0.48 ... 0.25 1.   1.  ]\n",
+      "Samples after bidding filtering:  741  Threshold:  0.7\n",
+      "[3, 3, 3, 2]\n",
+      "2\n",
+      "3 7 ['1D', 'PASS', '1S', 'PASS', '1N', 'PASS', '2N']\n",
+      "[3, 3, 3, 2]\n",
+      "2\n",
+      "3 7 ['1D', 'PASS', '1S', 'PASS', '1N', 'PASS', 'PASS']\n",
+      "[3, 3, 3, 2]\n",
+      "2\n",
+      "3 7 ['1D', 'PASS', '1S', 'PASS', '1N', 'PASS', '3N']\n",
+      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 0.288, 'expected_score': 86, 'adjustment': 14}, {'call': '2N', 'insta_score': 0.66, 'expected_score': -357, 'adjustment': 33}, {'call': '3N', 'insta_score': 0.047, 'expected_score': -335, 'adjustment': 2}], 'samples': ['KQ9x.QJx.Kxx.Txx Jx.K9x.AQxxx.xxx ATx.A8x.T98x.KQ8 8xxx.Txxx.J.AJ9x 0.99963 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (8.2)  \\n 1D-P-1S-P-1N-P-P-P (8.2)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (8.2) ', 'KQ9x.QJx.Kxx.Txx x.A9xx.Jxxx.QJ9x Txx.K8x.AQT8.Kxx AJ8xx.Txx.9x.A8x 0.75095 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (7.5)  \\n 1D-P-1S-P-1N-P-P-P (7.1)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (7.5) ', 'KQ9x.QJx.Kxx.Txx xxxx.8xx.ATx.8xx AT.AK9x.98xx.J9x J8x.Txx.QJx.AKQx 0.77013 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (6.9)  \\n 1D-P-1S-P-1N-P-P-P (7.2)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (6.9) ', 'KQ9x.QJx.Kxx.Txx JTx.8xx.Axx.QJxx Ax.ATx.JT98x.A9x 8xxx.K9xx.Qx.K8x 0.99986 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (7.9)  \\n 1D-P-1S-P-1N-P-P-P (8.7)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (7.9) ', 'KQ9x.QJx.Kxx.Txx Txxxx.A9.x.AQ98x AJ.Txxx.AQxxx.Jx 8x.K8xx.JT98.Kxx 0.98416 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4D-P-4H-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (7.2)  \\n 1D-P-1S-P-1N-P-P-P (6.4)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (7.2) ', 'KQ9x.QJx.Kxx.Txx xx.9xxx.ATxx.Q98 ATx.A8.J98xx.KJx J8xx.KTxx.Q.Axxx 0.99963 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (8.4)  \\n 1D-P-1S-P-1N-P-P-P (8.4)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (8.4) ', 'KQ9x.QJx.Kxx.Txx JTxxx.8xx.Jx.AKx A8x.AKTx.AT98x.9 x.9xx.Qxx.QJ8xxx 0.99877 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4N-P-5C-P-5D-P-6C-P-6D-P-6S-P-7D-P-P-P (11.0)  \\n 1D-P-1S-P-1N-P-P-P (7.1)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (11.0) ', 'KQ9x.QJx.Kxx.Txx Axx.KT98.A9xx.Jx 8x.Axx.Q8xx.AK8x JTxx.xxx.JT.Q9xx 0.98386 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (7.9)  \\n 1D-P-1S-P-1N-P-P-P (8.3)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (7.9) ', 'KQ9x.QJx.Kxx.Txx 8xxx.Txx.Ax.KQ9x AJx.98xx.QJTxx.A Tx.AKx.98x.J8xxx 0.99964 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4D-P-4H-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (9.3)  \\n 1D-P-1S-P-1N-P-P-P (6.7)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (9.3) ', 'KQ9x.QJx.Kxx.Txx T8xxx.9x.QJx.Kxx Ax.K8xx.AT9xx.Q8 Jx.ATxx.8x.AJ9xx 0.99626 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4D-P-4H-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (8.9)  \\n 1D-P-1S-P-1N-P-P-P (7.2)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-X-P-P-P (8.9) ', 'KQ9x.QJx.Kxx.Txx Jx.KTxx.T8x.J98x ATx.98x.AQ9xx.Ax 8xxx.Axx.Jx.KQxx 0.99944 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-X-P-P-P (9.4)  \\n 1D-P-1S-P-1N-P-P-P (8.4)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (9.7) ', 'KQ9x.QJx.Kxx.Txx 8x.98xx.Tx.AKxxx Ax.KTxx.AJxxx.Qx JTxxx.Ax.Q98.J98 0.99279 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4N-P-5C-X-5D-P-6C-P-6D-P-6S-P-7D-X-P-P-P (9.5)  \\n 1D-P-1S-P-1N-P-P-P (8.2)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (9.5) ', 'KQ9x.QJx.Kxx.Txx Axx.T8xx.Q8x.AQx 8x.AKxx.Axxx.J9x JTxx.9x.JT9.K8xx 0.78509 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (6.9)  \\n 1D-P-1S-P-1N-P-P-P (7.9)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (6.9) ', 'KQ9x.QJx.Kxx.Txx xxxx.8xxx.AT.A8x A.A9xx.Q8xxx.Jxx JT8x.KT.J9x.KQ9x 0.72423 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4D-P-4H-P-5D-P-5S-P-6D-P-6S-P-P-P (6.0)  \\n 1D-P-1S-P-1N-P-P-P (6.7)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (7.7) ', 'KQ9x.QJx.Kxx.Txx Jxx.T98xx.xx.Q9x T8x.Kx.AQT98.KJx Axx.Axx.Jxx.A8xx 0.75478 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (8.8)  \\n 1D-P-1S-P-1N-P-P-P (8.8)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-X-P-P-P (8.8) ', 'KQ9x.QJx.Kxx.Txx Jx.8xxxx.Qx.Qxxx ATx.Tx.AJ8xx.A9x 8xxx.AK9.T9x.KJ8 0.99968 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (9.3)  \\n 1D-P-1S-P-1N-P-P-P (9.1)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (9.3) ', 'KQ9x.QJx.Kxx.Txx 8xx.98xx.A8xx.Ax ATx.Ax.JTxx.KJxx Jxx.KTxx.Q9.Q98x 0.99706 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (9.2)  \\n 1D-P-1S-P-1N-P-P-P (8.3)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (9.2) ', 'KQ9x.QJx.Kxx.Txx 8xx.KT9xx.Q8.AQ9 AJT.A8.T9xx.Kxxx xxx.xxx.AJxx.J8x 0.87993 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-P-P (9.1)  \\n 1D-P-1S-P-1N-P-P-P (8.5)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-P-P (9.1) ', 'KQ9x.QJx.Kxx.Txx Jxxxx.AK9x.8x.xx AT8.8x.QJ9xx.AJ9 x.Txxx.ATx.KQ8xx 0.99841 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (7.2)  \\n 1D-P-1S-P-1N-P-P-P (7.2)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-P-P (7.2) ', 'KQ9x.QJx.Kxx.Txx A8x.98xx.Qx.AKxx Tx.AKTx.AJxxx.8x Jxxx.xx.T98.QJ9x 0.77056 \\n 1D-P-1S-P-1N-P-2N-P-3S-P-4D-P-4H-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (9.7)  \\n 1D-P-1S-P-1N-P-P-P (7.4)  \\n 1D-P-1S-P-1N-P-3N-P-4S-P-5D-P-5S-P-6D-P-6S-P-7D-P-P-P (9.7) '], 'hcp': [8.4, 13.1, 7.4], 'shape': [2.9, 3.7, 2.6, 3.7, 2.7, 3.1, 4.4, 2.9, 3.2, 3.4, 2.8, 3.6], 'who': 'Simulation'}\n",
+      "{'bid': 'PASS', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}, {'call': '2H', 'insta_score': 0.0}], 'samples': [], 'hcp': [14.6, 8.2, 13.3], 'shape': [4.7, 2.2, 3.1, 3.1, 2.3, 3.1, 3.9, 3.6, 2.1, 2.9, 4.9, 3.2], 'who': 'NN'}\n",
+      "['1D', 'PASS', '1S', 'PASS', '1N', 'PASS', 'PASS', 'PASS']\n"
      ]
     }
    ],
    "source": [
-    "auction = ['PAD_START','PAD_START']  # since West deals we need 'PAD_START'\n",
+    "auction = [] \n",
     "\n",
-    "turn_i = len(auction) % 4 # whose turn is it to bid\n",
+    "turn_i = 2 # whose turn is it to bid\n",
     "step = 0\n",
     "\n",
     "while not bidding.auction_over(auction):\n",
     "    bid = bidder_bots[turn_i].bid(auction)\n",
-    "    # if step== 1:\n",
-    "    # bid.bid='X'\n",
-    "    if step== 3:\n",
-    "        bid.bid='1S'\n",
-    "    if step== 5:\n",
-    "        bid.bid='2C'\n",
+    "    if step== 9:\n",
+    "        bid.bid='2N'\n",
     "    print(bid.to_dict())\n",
     "    auction.append(bid.bid)\n",
     "    turn_i = (turn_i + 1) % 4  # next player's turn\n",
