--- a/UCBC 2024/Simulations/BiddingPreference.ipynb
+++ b/UCBC 2024/Simulations/BiddingPreference.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([True, False], hand, models, sampler, i, False) for i, hand in enumerate(hands)]"
+    "bidder_bots = [BotBid([True, False], hand, models, sampler, i, 3, False) for i, hand in enumerate(hands)]"
    ]
   },
   {
