--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -12,8 +12,8 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-278000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -47,56 +47,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_steps 3\n",
-      "[[[ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]\n",
-      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]\n",
-      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]]]\n"
+      "n_steps 2\n",
+      "[[[99.  1.  1. ...  0.  0.  0.]\n",
+      "  [99.  1.  1. ...  0.  0.  0.]\n",
+      "  [99.  1.  1. ...  0.  0.  0.]\n",
+      "  ...\n",
+      "  [99.  1.  1. ...  0.  0.  0.]\n",
+      "  [99.  1.  1. ...  0.  0.  0.]\n",
+      "  [99.  1.  1. ...  0.  0.  0.]]]\n"
      ]
     }
    ],
    "source": [
-    "auction = ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C','PAD_START']\n",
+    "auction = [\"PAD_START\", \"PAD_START\", '1N', 'PASS', 'PASS', 'PASS']\n",
     "n_steps = binary.calculate_step(auction)\n",
     "print(\"n_steps\", n_steps)\n",
-    "nesw_i = 2\n",
-    "vuln = [False, True]\n",
-    "hand = binary.parse_hand_f(32)(\"QT5.T8.KQT87.864\")\n",
+    "n_steps = 7\n",
+    "nesw_i = 3\n",
+    "vuln = [True, True]\n",
+    "hand = binary.parse_hand_f(32)(\"J.32.KJ983.QJT74\")\n",
     "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew)\n",
     "print(A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[ 6.32 10.24 16.77]]\n"
+      "c_hcp:[[ 5.84 10.18 15.67]]\n"
      ]
     }
    ],
@@ -118,42 +108,6 @@
     "\n",
     "print(f\"c_hcp:{c_hcp}\")\n",
     "#print(f\"c_shp:{c_shp[0][8]:.1f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "auction = ['PAD_START', '2C','4N']\n",
-    "n_steps = binary.calculate_step(auction)\n",
-    "n_samples = 10\n",
-    "nesw_i = 3\n",
-    "vuln = [True, False]\n",
-    "hand = binary.parse_hand_f(32)(\"AJT8653.J.962.92\")\n",
-    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew)\n",
-    "p_hcp, p_shp = models.binfo_model.model(A)\n",
-    "c_hcp = (lambda x: 4 * x + 10)(p_hcp.copy())\n",
-    "print(c_hcp)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "auction = ['PAD_START', '2C','4N','PASS']\n",
-    "n_steps = binary.calculate_step(auction)\n",
-    "n_samples = 10\n",
-    "nesw_i = 0\n",
-    "vuln = [True, False]\n",
-    "hand = binary.parse_hand_f(32)(\"K4.T9876532.54.6\")\n",
-    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew)\n",
-    "p_hcp, p_shp = models.binfo_model.model(A)\n",
-    "c_hcp = (lambda x: 4 * x + 10)(p_hcp.copy())\n",
-    "print(c_hcp)\n"
    ]
   }
  ],
