--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -52,14 +52,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from D:\\github\\ben\\UCBC 2024\\Models\\bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from D:\\github\\ben\\UCBC 2024\\Models\\binfo-286000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/dummy_model/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/righty_model/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/decl_model/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-bidding_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-binfo_same-278000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_suit-154000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_nt-59000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/decl-1000000\n"
      ]
     }
    ],
@@ -85,14 +87,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '4H',\n",
-       "  'insta_score': 0.2556,\n",
-       "  'expected_score': 186,\n",
-       "  'adjustment': 13},\n",
+       "[{'call': '4H', 'insta_score': 0.188, 'expected_score': 186, 'adjustment': 9},\n",
+       " {'call': 'X', 'insta_score': 0.433, 'expected_score': 131, 'adjustment': 22},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.6695,\n",
-       "  'expected_score': 33,\n",
-       "  'adjustment': 33}]"
+       "  'insta_score': 0.354,\n",
+       "  'expected_score': 122,\n",
+       "  'adjustment': 18}]"
       ]
      },
      "execution_count": 3,
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "# East deals, EW vulnerable.\n",
+    "\n",
     "vuln_ns, vuln_ew = False, False\n",
     "\n",
     "# you sit West and hold:\n",
@@ -115,7 +115,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = ['1D', '3S']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -132,11 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '6H', 'insta_score': 0.132, 'expected_score': 557, 'adjustment': 7},\n",
-       " {'call': 'PASS',\n",
-       "  'insta_score': 0.8391,\n",
-       "  'expected_score': 409,\n",
-       "  'adjustment': 42}]"
+       "[{'call': 'PASS', 'insta_score': 0.961}]"
       ]
      },
      "execution_count": 4,
@@ -156,6 +152,14 @@
    "id": "602468ef",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "['PAD_START', 'PASS', '1H', 'X', '4H', 'PASS', 'PASS', 'X']\n",
+      "Bid not valid: 4H insta_score: 0.218 0.1\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -183,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.9995}]"
+       "[{'call': 'PASS', 'insta_score': 0.219}]"
       ]
      },
      "execution_count": 6,
@@ -230,11 +234,7 @@
     {
      "data": {
       "text/plain": [
-       "['x.AKJT8x.xxx.Kxx T98xx.x.T98x.T9x AJxx.Q9xxxx.KJ.x KQx..AQxx.AQJ8xx 0.21341',\n",
-       " 'x.AKJT8x.xxx.Kxx 8xxxx.xx.J9x.xxx Ax.Q9xxx.AT8x.T8 KQJT9..KQx.AQJ9x 0.19239',\n",
-       " 'x.AKJT8x.xxx.Kxx T9xx.9.J8xx.8xxx Kxx.Qxxxxx.A9.JT AQJ8x..KQTx.AQ9x 0.07737',\n",
-       " 'x.AKJT8x.xxx.Kxx 8xxx.x.J8xx.J9xx ATxx.Q9xxx.9x.Ax KQJ9.x.AKQT.QT8x 0.03372',\n",
-       " 'x.AKJT8x.xxx.Kxx T9xxx.x.9xx.Txxx Q8x.Q9xxx.AQ8.Jx AKJx.x.KJTx.AQ98 0.02312']"
+       "[]"
       ]
      },
      "execution_count": 7,
@@ -266,32 +266,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
-      "x.AKJT8x.xxx.Kxx AQxx.xxx.J8x.Jxx T9xxx.x.T9x.T98x KJ8.Q9x.AKQx.AQx\n",
-      "x.AKJT8x.xxx.Kxx Q9xx.Q9x.K98.xxx T8xxx.x.Txx.JT8x AKJ.xxx.AQJx.AQ9\n",
-      "x.AKJT8x.xxx.Kxx K8xx.xx.Txx.QJT9 QTxxx.9x.8x.xxxx AJ9.Qxx.AKQJ9.A8\n",
-      "x.AKJT8x.xxx.Kxx QJ8x.9x.J8x.QJ98 T9xxx.xx.Q9x.Txx AKx.Qxx.AKTx.Axx\n",
-      "x.AKJT8x.xxx.Kxx KQ9x.9xx.8xxx.Qx JTxxx.xx.T.JT9xx A8x.Qx.AKQJ9.A8x\n",
-      "x.AKJT8x.xxx.Kxx KJxx.9x.8x.QT9xx QT9xx.xx.T9x.J8x A8x.Qxx.AKQJx.Ax\n",
-      "x.AKJT8x.xxx.Kxx Q9xx.xx.J9x.Q8xx JT8xx.9x.Q8.J9xx AKx.Qxx.AKTxx.AT\n",
-      "x.AKJT8x.xxx.Kxx KTxx.9xx.Q98.Txx J98xx.xx.xx.QJ8x AQx.Qx.AKJTx.A9x\n",
-      "x.AKJT8x.xxx.Kxx KJxx.xxx.J98.Txx T98xx.x.Tx.QJ98x AQx.Q9x.AKQxx.Ax\n",
-      "x.AKJT8x.xxx.Kxx J9xx.xx.K8x.QJTx QT8xxx.xxx.9x.9x AK.Q9.AQJTx.A8xx\n",
-      "x.AKJT8x.xxx.Kxx JTxx.xx.K8x.QT9x Q98xxx.9xx.JTx.x AK.Qx.AQ9x.AJ8xx\n",
-      "x.AKJT8x.xxx.Kxx K9xx.9xx.9xx.Q9x QJT8xx.xx.JT.8xx Ax.Qx.AKQ8x.AJTx\n",
-      "x.AKJT8x.xxx.Kxx KT8x.9x.Q98x.JTx QJ9xxx.xxx.T.9xx Ax.Qx.AKJxx.AQ8x\n",
-      "x.AKJT8x.xxx.Kxx QT9x.9xx.Qxx.J9x KJ8xxx.xx.98x.8x Ax.Qx.AKJT.AQTxx\n",
-      "x.AKJT8x.xxx.Kxx Jxxx.9xxx.xx.QJx QT98x.x.Q9x.T9xx AKx.Qx.AKJT8.A8x\n",
-      "x.AKJT8x.xxx.Kxx KQJTxx.xx.98x.8x 98xx.xxx.Jx.Jxxx Ax.Q9.AKQTx.AQT9\n",
-      "x.AKJT8x.xxx.Kxx J8xx.9xx.T8x.ATx 9xxx.Qxx.9x.J9xx AKQT.x.AKQJx.Q8x\n"
+      "Good quality: True\n",
+      "x.AKJT8x.xxx.Kxx Q9xx.9xxx.KJ.Txx JT8xx.x.8xxx.Q8x AKx.Qx.AQT9.AJ9x\n",
+      "x.AKJT8x.xxx.Kxx Qxxx.9x.J9x.Qxxx JT98x.xxx.Kx.98x AKx.Qx.AQT8x.AJT\n",
+      "x.AKJT8x.xxx.Kxx AT9x.Q9xx.8xx.Q8 J8xxx.x.T9x.T9xx KQx.xx.AKQJ.AJxx\n",
+      "x.AKJT8x.xxx.Kxx K9xx.xx.Tx.Q8xxx Q8xxx.9x.J8x.T9x AJT.Qxx.AKQ9x.AJ\n",
+      "x.AKJT8x.xxx.Kxx QJ9x.xx.AJ9.Jxxx T8xxx.9x.xxx.T98 AKx.Qxx.KQT8.AQx\n",
+      "x.AKJT8x.xxx.Kxx Q9xx.Qx.Qxx.Jxxx JTxxx.xx.JT9.T8x AK8.9xx.AK8x.AQ9\n",
+      "x.AKJT8x.xxx.Kxx Qxxx.9xxx.98.AJx JT98x.x.JTxx.Txx AKx.Qx.AKQx.Q98x\n",
+      "x.AKJT8x.xxx.Kxx K9x.Qxxx.8xx.8xx QJT8xx.x.T9x.T9x Axx.9x.AKQJ.AQJx\n",
+      "x.AKJT8x.xxx.Kxx KTxx.xx.QTxx.Q9x Q98xx.xxx.9x.8xx AJx.Q9.AKJ8.AJTx\n",
+      "x.AKJT8x.xxx.Kxx KQ8x.xxx.JTx.Qxx T9xxx.9.98x.J8xx AJx.Qxx.AKQx.AT9\n",
+      "x.AKJT8x.xxx.Kxx A9xx.9xx.xx.QJ8x JT8xx.xx.JT98x.x KQx.Qx.AKQ.AT9xx\n",
+      "x.AKJT8x.xxx.Kxx KT8x.xx.QJTx.T9x Q9xxx.9x.98x.Jxx AJx.Qxx.AKx.AQ8x\n",
+      "x.AKJT8x.xxx.Kxx QT8xx.Qxxx.Kxx.x J9xx.x.T98x.98xx AKx.9x.AQJ.AQJTx\n",
+      "x.AKJT8x.xxx.Kxx T9xx.xxxx.Q8xx.Q QJ8xx.9.J9x.J8xx AKx.Qx.AKT.AT9xx\n",
+      "x.AKJT8x.xxx.Kxx AT8x.xxx.9.Txxxx J9xxx.Qx.JT8xx.J KQx.9x.AKQx.AQ98\n",
+      "x.AKJT8x.xxx.Kxx KT8x.xxxx.Txx.JT Q9xxx.x.QJ9.98xx AJx.Q9.AK8x.AQxx\n",
+      "x.AKJT8x.xxx.Kxx QJ9x.xxx.J9x.9xx 8xxxx.9x.Q8x.QT8 AKT.Qx.AKTx.AJxx\n",
+      "x.AKJT8x.xxx.Kxx T8xx.xxx.J8x.QJx KQ9xx.9x.T9.T8xx AJx.Qx.AKQxx.A9x\n",
+      "x.AKJT8x.xxx.Kxx Q9xx.xxx.Jx.Jxxx JT8xx.9x.QT9.QTx AKx.Qx.AK8xx.A98\n",
+      "x.AKJT8x.xxx.Kxx JTxx.xxx.K8x.Txx Q98xx.9x.Qx.98xx AKx.Qx.AJT9x.AQJ\n",
+      "x.AKJT8x.xxx.Kxx J9x.Q9xx.x.JT8xx KT8xxx.x.JT98.xx AQx.xx.AKQxx.AQ9\n",
+      "x.AKJT8x.xxx.Kxx Jxxx.Q9x.JT9.Txx QT98x.xx.xxx.J98 AKx.xx.AKQ8.AQxx\n",
+      "x.AKJT8x.xxx.Kxx QTxx.xx.JT9x.JT8 J98xx.xx.8xx.Qxx AKx.Q9x.AKQ.A9xx\n",
+      "x.AKJT8x.xxx.Kxx QTxx.Qxxx.QTx.Tx J98xxx.x.8x.Q9xx AK.9x.AKJ9x.AJ8x\n",
+      "x.AKJT8x.xxx.Kxx K8x.Q9xx.T.QT8xx JT9xxxx.x.J9xx.x AQ.xx.AKQ8x.AJ9x\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'])\n",
-    "\n",
+    "sample_hands, sorted_score, p_hcp, p_shp, good_quality = bot_bid.sample_hands_for_auction(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'], 0)\n",
+    "print(\"Good quality:\", good_quality)\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
    ]
@@ -323,10 +331,10 @@
     {
      "data": {
       "text/plain": [
-       "['JT7.AJ62.T9.JT87',\n",
-       " 'AQ9832.T87.876.9',\n",
-       " 'K4.Q43.AQ432.Q65',\n",
-       " '65.K95.KJ5.AK432']"
+       "['QT942..KJT6.T963',\n",
+       " 'AK8753.QT5.43.J5',\n",
+       " 'J.764.AQ9875.A84',\n",
+       " '6.AKJ9832.2.KQ72']"
       ]
      },
      "execution_count": 9,
@@ -346,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models, sampler,i, False) for i, hand in enumerate(hands)]"
+    "bidder_bots = [BotBid([False, False], hand, models, sampler,i, 0,False) for i, hand in enumerate(hands)]"
    ]
   },
   {
@@ -358,7 +366,7 @@
     {
      "data": {
       "text/plain": [
-       "['PASS', '2S', '3D', '3S', 'PASS', 'PASS', 'PASS']"
+       "['PASS', '2S', 'PASS', '3H', 'PASS', '4H', 'PASS', 'PASS', 'PASS']"
       ]
      },
      "execution_count": 11,
