--- a/UCBC 2024/Simulations/Bidding4S.ipynb
+++ b/UCBC 2024/Simulations/Bidding4S.ipynb
@@ -106,7 +106,7 @@
     "hand = '7632.J964.K94.J5'\n",
     "\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1C\", \"1H\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 3, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
